Added Analysis:FFT plugin

--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
@@ -68,3 +68,11 @@ Type = "External"
 Source = "PXI_Trig1"
 TimebaseRate = "18000000.000000"
 sample mode = "10123"
+
+[Channel_2]
+Name = "ai2"
+Enabled = "TRUE"
+InputImpedance = "50.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "10.000000"
