--- a/UserFiles/Plugins/Analysis/FFT/fft.ini
+++ b/UserFiles/Plugins/Analysis/FFT/fft.ini
@@ -1,25 +1,22 @@
 [Path to Class]
-Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
+Path = "..\..\AnalysisPlugins\FftClass\Fft.lvclass"
 
 [Type]
-Type = PMU
+Type = FFT
 
 [Script]
-Script.<size(s)> = "10"
+Script.<size(s)> = "8"
 Script 0 = "LoopConfigStopCond,TrigtimeGtTend,10.0"
 Script 1 = "SyncGetTrigTimestamp,1_PPS,2.0"
 Script 2 = "LoopSetStopCondition"
 Script 3 = "FGenInitiateGen"
-Script 4 = "SensorStart"
-Script 5 = "AnalysisInitialize"
-Script 6 = "GetLoopScript,Digitizer,Sync"
-Script 7 = "FGenAbortGen"
-Script 8 = "DigitizerAbort"
-Script 9 = "SensorStop"
-Script 10 = "AnalysisAbort"
+Script 4 = "AnalysisInitialize"
+Script 5 = "GetLoopScript,Digitizer,Sync"
+Script 6 = "FGenAbortGen"
+Script 7 = "DigitizerAbort"
 
 [clConfig]
-F0 = "60"
+F0 = "50"
 SettlingTime = "7.000000"
 AnalysisCycles = "3.000000"
 SampleRate = "4800.000000"
