--- a/UserFiles/Plugins/Analysis/FFT/fft.ini
+++ b/UserFiles/Plugins/Analysis/FFT/fft.ini
@@ -6,7 +6,7 @@ Type = FFT
 
 [Script]
 Script.<size(s)> = "8"
-Script 0 = "LoopConfigStopCond,TrigtimeGtTend,10.0"
+Script 0 = "LoopConfigStopCond,TrigtimeGtTend,1.0"
 Script 1 = "SyncGetTrigTimestamp,1_PPS,2.0"
 Script 2 = "LoopSetStopCondition"
 Script 3 = "FGenInitiateGen"
@@ -16,10 +16,18 @@ Script 6 = "FGenAbortGen"
 Script 7 = "DigitizerAbort"
 
 [clConfig]
-F0 = "50"
+F0 = "200"
 SettlingTime = "7.000000"
-AnalysisCycles = "3.000000"
+AnalysisCycles = "20.000000"
 SampleRate = "4800.000000"
-NumChannels = "6"
+NumChannels = "1"
 TsOffset = "start"
 %TsOffset: 1 = start, 2 = middle, 3 = end
+
+[FftView]
+dB On (F) = "FALSE"
+unwrap phase (F) = "FALSE"
+convert to degree (F) = "FALSE"
+
+[WindowFunction]
+WindowFunction = "0"
