Added Submodule LV_TestAutomation

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "LV_Ini"]
 	path = LV_Ini
 	url = https://github.com/usnistgov/LV_Ini.git
+[submodule "LV_TestAutomation"]
+	path = LV_TestAutomation
+	url = https://github.com/usnistgov/LV_TestAutomation.git
