Added Settings button to main.  Merged Modules with other branches.  Modified debugging script for Sync Multitrig plugin

--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/DebugSync.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/DebugSync.ini
@@ -5,14 +5,18 @@ Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 Type = "Debug"
 
 [Script]
-Script.<size(s)> = "3"
+Script.<size(s)> = "7"
 Script 0 = "ErrorSeverity,Abort"
 Script 1 = "SyncGetLockStatus"
 Script 2 = "SyncCheckLock"
+Script 3 = "LoopConfigStopCond,TrigtimeGtTend,10.0"
+Script 4 = "SyncGetTrigTimestamp,1_PPS,2000"
+Script 5 = "LoopSetStopCondition"
+Script 6 = "GetLoopScript,Sync"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
-LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2.0"
+LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2000"
 LoopScript 1 = "LoopUntilDone"
 
 [Handle]
