Added Function class .ini files

--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -5,13 +5,14 @@ Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 Type = "Dyn3 PMU Cal"
 
 [Script]
-Script.<size(s)> = "2"
-Script 0 = "SyncGetLockStatus"
-Script 1 = "SyncCheckLock"
+Script.<size(s)> = "3"
+Script 0 = "ErrorSeverity,Abort"
+Script 1 = "SyncGetLockStatus"
+Script 2 = "SyncCheckLock"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
-LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2.0"
+LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2000"
 LoopScript 1 = "LoopUntilDone"
 
 [Handle]
