WIP: PMU Analysis.  Need to align pmu reports with fitter window.

--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
@@ -76,3 +76,27 @@ InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "10.000000"
+
+[Channel_3]
+Name = "ai3"
+Enabled = "TRUE"
+InputImpedance = "50.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "0.000000"
+
+[Channel_4]
+Name = "ai4"
+Enabled = "TRUE"
+InputImpedance = "50.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "0.000000"
+
+[Channel_5]
+Name = "ai5"
+Enabled = "TRUE"
+InputImpedance = "50.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "0.000000"
