--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -12,7 +12,7 @@ Script 2 = "SyncCheckLock"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
-LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2000"
+LoopScript 0 = "GetSysTime"
 LoopScript 1 = "LoopUntilDone"
 
 [Handle]
@@ -96,4 +96,4 @@ TimeRefType = "GPS"
 4.TrigTime = "FALSE"
 
 [SyncWinClk]
-SyncWinClk = "FALSE"
+SyncWinClk = "TRUE"
