--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
@@ -33,8 +33,8 @@ Source = "Edge"
 Delay = "0.000000"
 Holdoff = "0.000000"
 PretriggerSamples = "0"
-Sources.<size(s)> = "2"
-Sources 0.Name = "/PXI1Slot7/PFI1"
+Sources.<size(s)> = "1"
+Sources 0.Name = "PXI_Trig2"
 Sources 0.Coupling = "AC"
 Sources 0.Hysteresis = "0.000000"
 Sources 0.Level = "0.000000"
@@ -68,6 +68,8 @@ Type = "External"
 Source = "PXI_Trig1"
 TimebaseRate = "18000000.000000"
 sample mode = "10123"
+TrigTerm = "PXI1Slot7/PFI0"
+SyncHandle = "PXI1Slot4"
 
 [Channel_2]
 Name = "ai2"
@@ -83,7 +85,7 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "0.000000"
+Range = "10.000000"
 
 [Channel_4]
 Name = "ai4"
@@ -91,7 +93,7 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "0.000000"
+Range = "10.000000"
 
 [Channel_5]
 Name = "ai5"
@@ -99,4 +101,9 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "0.000000"
+Range = "10.000000"
+
+[Sync]
+Handle = "PXI1Slot7"
+SrcTerm = "PXI_Trig2"
+DestTerm = "PFI0"
