--- a/UserFiles/Plugins/FGen/NiPxi6733/Test.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/Test.ini
@@ -15,8 +15,8 @@ rate = "18000000.000000"
 SampleRate = "4800.000000"
 
 [Channels]
-Count = "1"
-Channel.<size(s)> = "1"
+Count = "6"
+Channel.<size(s)> = "6"
 Channel 0.Name = "ao0"
 Channel 0.Enabled = "FALSE"
 Channel 0.Operation = "Continuous"
@@ -24,9 +24,44 @@ Channel 0.Impedance (50) = "10.000000"
 Channel 0.Handle = "PXI1Slot6"
 Channel 0.Connected = "FALSE"
 Channel 0.Mode (Function) = "Function"
+Channel 1.Name = "ao1"
+Channel 1.Enabled = "FALSE"
+Channel 1.Operation = "Continuous"
+Channel 1.Impedance (50) = "10.000000"
+Channel 1.Handle = "PXI1Slot6"
+Channel 1.Connected = "FALSE"
+Channel 1.Mode (Function) = "Function"
+Channel 2.Name = "ao2"
+Channel 2.Enabled = "FALSE"
+Channel 2.Operation = "Continuous"
+Channel 2.Impedance (50) = "50.000000"
+Channel 2.Handle = "PXI1Slot6"
+Channel 2.Connected = "FALSE"
+Channel 2.Mode (Function) = "Function"
+Channel 3.Name = "ao3"
+Channel 3.Enabled = "FALSE"
+Channel 3.Operation = "Continuous"
+Channel 3.Impedance (50) = "50.000000"
+Channel 3.Handle = "PXI1Slot6"
+Channel 3.Connected = "FALSE"
+Channel 3.Mode (Function) = "Function"
+Channel 4.Name = "ao4"
+Channel 4.Enabled = "FALSE"
+Channel 4.Operation = "Continuous"
+Channel 4.Impedance (50) = "50.000000"
+Channel 4.Handle = "PXI1Slot6"
+Channel 4.Connected = "FALSE"
+Channel 4.Mode (Function) = "Function"
+Channel 5.Name = "ao5"
+Channel 5.Enabled = "FALSE"
+Channel 5.Operation = "Continuous"
+Channel 5.Impedance (50) = "50.000000"
+Channel 5.Handle = "PXI1Slot6"
+Channel 5.Connected = "FALSE"
+Channel 5.Mode (Function) = "Function"
 
 [FunctionIniFilePAth]
-Path = "\..\..\..\..\..\MemberClasses\StandardFunction\test.ini
+Path = "\..\..\..\..\..\MemberClasses\StandardFunction\6Phase_Sine_50f0.ini
 
 [Triggers]
 Count = "1"
