--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -23,28 +23,28 @@ Timing = "PXI1Slot4"
 TimeRefType = "GPS"
 
 [Triggers]
-.<size(s)> = "3"
-0.Name = "Timed_1"
-0.DestTerm = "/PXI1Slot7/PFI0"
-0.SrcTerm = ""
-0.SyncClk = ""
+.<size(s)> = "1"
+0.Name = "Digitizer Trigger"
+0.DestTerm = "PXI_Trig2"
+0.SrcTerm = "/PXI1Slot7/PFI1"
+0.SyncClk = "SyncClkAsync"
 0.Edge = "0"
 0.Invert? = "0"
 0.Initiated = "FALSE"
-0.Type = "Timed"
+0.Type = "Connect"
 0.TrigTime = "FALSE"
-1.Name = "Software_1"
-1.DestTerm = "PFI1"
-1.SrcTerm = ""
+1.Name = "Digitizer TimeTrig"
+1.DestTerm = "PFI0"
+1.SrcTerm = "PXI_Trig2"
 1.SyncClk = "SyncClkAsync"
 1.Edge = "0"
 1.Invert? = "0"
 1.Initiated = "FALSE"
-1.Type = "Software"
+1.Type = "Connect"
 1.TrigTime = "FALSE"
-2.Name = "Connect_1"
-2.DestTerm = "PFI2"
-2.SrcTerm = "PXI_Trig1"
+2.Name = "Digitizer Timing"
+2.DestTerm = "PFI0"
+2.SrcTerm = "PXI_Trig2"
 2.SyncClk = "SyncClkAsync"
 2.Edge = "0"
 2.Invert? = "0"
@@ -89,7 +89,7 @@ TimeRefType = "GPS"
 4.Name = "Pgm_PPS"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
-4.Frequency = "10.000000"
+4.Frequency = "50.000000"
 4.DutyCycle = "0.500000"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
