Changed the timing and triggering sources for the Digitizer and Sync.

--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
@@ -105,5 +105,5 @@ Range = "10.000000"
 
 [Sync]
 Handle = "PXI1Slot7"
-SrcTerm = "PXI_Trig2"
-DestTerm = "PFI0"
+SrcTerm = ""
+DestTerm = "PXI_Trig7"
