--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU_Cal.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU_Cal.ini
@@ -12,10 +12,10 @@ Script 2 = "FGenConfigFunction"
 Script 3 = "FGenConfigTriggers"
 
 [RefClk]
-RefClk = "0"
+RefClk = "101"
 
 [Timebase]
-source = "/PXI1Slot6/PXI_Trig1"
+source = "PXI_Trig3"
 rate = "18000000.000000"
 
 [SampleRate]
@@ -25,21 +25,21 @@ SampleRate = "4800.000000"
 Count = "6"
 Channel.<size(s)> = "6"
 Channel 0.Name = "ao0"
-Channel 0.Enabled = "FALSE"
+Channel 0.Enabled = "TRUE"
 Channel 0.Operation = "Continuous"
-Channel 0.Impedance (50) = "10.000000"
+Channel 0.Impedance (50) = "50.000000"
 Channel 0.Handle = "PXI1Slot6"
 Channel 0.Connected = "FALSE"
 Channel 0.Mode (Function) = "Function"
 Channel 1.Name = "ao1"
-Channel 1.Enabled = "FALSE"
+Channel 1.Enabled = "TRUE"
 Channel 1.Operation = "Continuous"
-Channel 1.Impedance (50) = "10.000000"
+Channel 1.Impedance (50) = "50.000000"
 Channel 1.Handle = "PXI1Slot6"
 Channel 1.Connected = "FALSE"
 Channel 1.Mode (Function) = "Function"
 Channel 2.Name = "ao2"
-Channel 2.Enabled = "FALSE"
+Channel 2.Enabled = "TRUE"
 Channel 2.Operation = "Continuous"
 Channel 2.Impedance (50) = "50.000000"
 Channel 2.Handle = "PXI1Slot6"
