--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -23,8 +23,8 @@ Timing = "PXI1Slot4"
 TimeRefType = "GPS"
 
 [Triggers]
-.<size(s)> = "1"
-0.Name = "Digitizer Trigger"
+.<size(s)> = "2"
+0.Name = "PPS_Trigger"
 0.DestTerm = "PXI_Trig2"
 0.SrcTerm = "/PXI1Slot7/PFI1"
 0.SyncClk = "SyncClkAsync"
@@ -33,15 +33,15 @@ TimeRefType = "GPS"
 0.Initiated = "FALSE"
 0.Type = "Connect"
 0.TrigTime = "FALSE"
-1.Name = "Digitizer TimeTrig"
-1.DestTerm = "PFI0"
-1.SrcTerm = "PXI_Trig2"
+1.Name = "Digitizer TrigTime"
+1.DestTerm = "PXI_Trig7"
+1.SrcTerm = ""
 1.SyncClk = "SyncClkAsync"
 1.Edge = "0"
 1.Invert? = "0"
 1.Initiated = "FALSE"
-1.Type = "Connect"
-1.TrigTime = "FALSE"
+1.Type = "TrigTime"
+1.TrigTime = "TRUE"
 2.Name = "Digitizer Timing"
 2.DestTerm = "PFI0"
 2.SrcTerm = "PXI_Trig2"
@@ -64,13 +64,13 @@ TimeRefType = "GPS"
 0.TrigTime = "FALSE"
 1.Name = "FGenClk"
 1.RefClk = "Synchronization Clock (Full Speed)"
-1.ClkTerminal = "PXI_Trig0"
+1.ClkTerminal = "PXI_Trig3"
 1.Frequency = "0.000000"
 1.DutyCycle = "0.000000"
 1.ClkType = "TrigClk"
 1.Initiated = "FALSE"
 1.TrigTime = "FALSE"
-2.Name = "SamplerClk"
+2.Name = "DigitizerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
 2.ClkTerminal = "PXI_Trig1"
 2.Frequency = "0.000000"
@@ -85,7 +85,7 @@ TimeRefType = "GPS"
 3.DutyCycle = "0.500000"
 3.ClkType = "FreqClk"
 3.Initiated = "FALSE"
-3.TrigTime = "FALSE"
+3.TrigTime = "TRUE"
 4.Name = "Pgm_PPS"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
@@ -96,4 +96,4 @@ TimeRefType = "GPS"
 4.TrigTime = "FALSE"
 
 [SyncWinClk]
-SyncWinClk = "TRUE"
+SyncWinClk = "FALSE"
