Digitizer uses Trig3 instead of Trig2 now. FGen and Analysis paths to the function .ini files are now strings relative to the UserFiles/Plugins/ folder.Testing various PmuTestFunctions.

--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -5,19 +5,19 @@ Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 Type = "Dyn3 PMU Cal"
 
 [Script]
-Script.<size(s)> = "3"
-Script 0 = "ErrorSeverity,Abort"
-Script 1 = "SyncGetLockStatus"
-Script 2 = "SyncCheckLock"
+Script.<size(s)> = "2"
+Script 0 = "SyncGetLockStatus"
+Script 1 = "SyncCheckLock"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
-LoopScript 0 = "GetSysTime"
+LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2.0"
 LoopScript 1 = "LoopUntilDone"
 
 [Handle]
 RefClk = "PXI1Slot7"
 Timing = "PXI1Slot4"
+RefClkSource = "PXI_Trig0"
 
 [TimeRefType]
 TimeRefType = "GPS"
@@ -25,15 +25,15 @@ TimeRefType = "GPS"
 [Triggers]
 .<size(s)> = "2"
 0.Name = "PPS_Trigger"
-0.DestTerm = "PXI_Trig2"
-0.SrcTerm = "/PXI1Slot7/PFI1"
+0.DestTerm = "PXI_Trig3"
+0.SrcTerm = "PFI1"
 0.SyncClk = "SyncClkAsync"
 0.Edge = "0"
 0.Invert? = "0"
 0.Initiated = "FALSE"
 0.Type = "Connect"
 0.TrigTime = "FALSE"
-1.Name = "Digitizer TrigTime"
+1.Name = "Digitizer_TrigTime"
 1.DestTerm = "PXI_Trig7"
 1.SrcTerm = ""
 1.SyncClk = "SyncClkAsync"
@@ -42,8 +42,8 @@ TimeRefType = "GPS"
 1.Initiated = "FALSE"
 1.Type = "TrigTime"
 1.TrigTime = "TRUE"
-2.Name = "Digitizer Timing"
-2.DestTerm = "PFI0"
+2.Name = "Connect_1"
+2.DestTerm = "PFI2"
 2.SrcTerm = "PXI_Trig2"
 2.SyncClk = "SyncClkAsync"
 2.Edge = "0"
@@ -64,15 +64,15 @@ TimeRefType = "GPS"
 0.TrigTime = "FALSE"
 1.Name = "FGenClk"
 1.RefClk = "Synchronization Clock (Full Speed)"
-1.ClkTerminal = "PXI_Trig3"
+1.ClkTerminal = "PXI_Trig1"
 1.Frequency = "0.000000"
 1.DutyCycle = "0.000000"
 1.ClkType = "TrigClk"
 1.Initiated = "FALSE"
 1.TrigTime = "FALSE"
-2.Name = "DigitizerClk"
+2.Name = "SamplerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
-2.ClkTerminal = "PXI_Trig1"
+2.ClkTerminal = "PXI_Trig2"
 2.Frequency = "0.000000"
 2.DutyCycle = "0.000000"
 2.ClkType = "TrigClk"
@@ -89,7 +89,7 @@ TimeRefType = "GPS"
 4.Name = "Pgm_PPS"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
-4.Frequency = "50.000000"
+4.Frequency = "10.000000"
 4.DutyCycle = "0.500000"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
