--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
@@ -6,7 +6,7 @@ Type = PMU
 
 [Script]
 Script.<size(s)> = "10"
-Script 0 = "LoopConfigStopCond,TrigTimeGtTend,10.0"
+Script 0 = "LoopConfigStopCond,TrigTimeGtTend,2.0"
 Script 1 = "GetSysTime"
 Script 2 = "LoopSetStopCondition"
 Script 3 = "FGenInitiateGen"
@@ -24,15 +24,15 @@ SettlingTime = "7.000000"
 AnalysisCycles = "3.000000"
 SampleRate = "4800.000000"
 NumChannels = "6"
-TsOffset = "start"
+TsOffset = "middle"
 %TsOffset: 1 = start, 2 = middle, 3 = end
 
 [TestType]
-eTestType = "SteadyState"
+eTestType = "Ramp"
 
 [FcnIniFilePath]
 FunctionIniFilePath = "PmuTestFunctions\50F0_50Fs_FreqRng.ini"
-Accessors:FunctionIniFilePath = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
+Accessors:FunctionIniFilePath = "PmuTestFunctions\\50f0_1r0_Ramp.ini"
 
 [MagCorr]
 MagCorr = "<size(s)=6> 21.010200 21.002000 21.000200 10.0004200 10.0003400 10.000500"
