--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU_Cal.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU_Cal.ini
@@ -68,7 +68,7 @@ Channel 5.Connected = "FALSE"
 Channel 5.Mode (Function) = "Function"
 
 [FunctionIniFilePAth]
-Path = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
+Path = "PmuTestFunctions\\50f0_1r0_Ramp.ini"
 
 [Triggers]
 Count = "1"
