Added Agilent3458 to Digitizer module, updated some of the FGen .ini files.

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
@@ -28,14 +28,14 @@ TsOffset = "middle"
 %TsOffset: 1 = start, 2 = middle, 3 = end
 
 [TestType]
-eTestType = "Ramp"
+eTestType = "SteadyState"
 
 [FcnIniFilePath]
 FunctionIniFilePath = "PmuTestFunctions\50F0_50Fs_FreqRng.ini"
-Accessors:FunctionIniFilePath = "PmuTestFunctions\\50f0_1r0_Ramp.ini"
+Accessors:FunctionIniFilePath = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
 
 [MagCorr]
-MagCorr = "<size(s)=6> 21.010200 21.002000 21.000200 10.0004200 10.0003400 10.000500"
+MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 
 [DlyCorr]
-DlyCorr = "<size(s)=6> 0 0 0 0 0 0"
+DlyCorr = "<size(s)=6> 697 657 735 -95 -96 -93"
