--- a/UserFiles/Plugins/FGen/NiPxi6733/NiPxi6733_sine_standalone.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/NiPxi6733_sine_standalone.ini
@@ -21,18 +21,18 @@ RefClk = "0"
 
 [Timebase]
 source = "/PXI1Slot6/PXI_Trig1"
-rate = "18000000.000000"
+rate = "20000000.000000"
 
 [SampleRate]
-SampleRate = "4800.000000"
+SampleRate = "100000.000000"
 
 [Channels]
 Count = "3"
 Channel.<size(s)> = "3"
 Channel 0.Name = "ao0"
-Channel 0.Enabled = "FALSE"
+Channel 0.Enabled = "TRUE"
 Channel 0.Operation = "Continuous"
-Channel 0.Impedance (50) = "10.000000"
+Channel 0.Impedance (50) = "50.000000"
 Channel 0.Handle = "PXI1Slot6"
 Channel 0.Connected = "FALSE"
 Channel 0.Mode (Function) = "Function"
@@ -52,12 +52,12 @@ Channel 2.Connected = "FALSE"
 Channel 2.Mode (Function) = "Function"
 
 [FunctionIniFilePAth]
-Path = "\..\..\..\..\..\MemberClasses\StandardFunction\3Phase_Sine_60f0.ini
+Path = "StandardFunction\\3Phase_Sine_60f0.ini"
 
 [Triggers]
 Count = "1"
 Triggers.<size(s)> = "1"
-Triggers 0.Source = "/PXI1Slot7/PFI1"
+Triggers 0.Source = "PXI_Trig3"
 Triggers 0.Slope = "Positive"
 Triggers 0.Threshold = "0.000000"
 Triggers 0.Delay = "0.000000"
