Work in progress on the test scripts.

--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
@@ -5,12 +5,14 @@ Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 Type = PMU Cal
 
 [Script]
-Script.<size(s)> = "5"
+Script.<size(s)> = "7"
 Script 0 = "DigitizerInitialize"
 Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
+Script 5 = "SyncGetInfo,Digitizer_TrigTime"
+Script 6 = "DigitizerWriteSyncInfo"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
