--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -11,7 +11,8 @@ Script 1 = "SyncCheckLock"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
-LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2.0"
+;LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2.0"
+LoopScript 0 = "GetSysTime"
 LoopScript 1 = "LoopUntilDone"
 
 [Handle]
@@ -96,4 +97,4 @@ TimeRefType = "GPS"
 4.TrigTime = "FALSE"
 
 [SyncWinClk]
-SyncWinClk = "FALSE"
+SyncWinClk = "TRUE"
