Added Digitizer and FGen close to scripts

--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -42,7 +42,7 @@ TimeRefType = "GPS"
 1.Invert? = "0"
 1.Initiated = "FALSE"
 1.Type = "TrigTime"
-1.TrigTime = "TRUE"
+1.TrigTime = "FALSE"
 2.Name = "Connect_1"
 2.DestTerm = "PFI2"
 2.SrcTerm = "PXI_Trig2"
@@ -97,4 +97,4 @@ TimeRefType = "GPS"
 4.TrigTime = "FALSE"
 
 [SyncWinClk]
-SyncWinClk = "TRUE"
+SyncWinClk = "FALSE"
