--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
@@ -5,22 +5,26 @@ Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 Type = PMU
 
 [Script]
-Script.<size(s)> = "10"
-Script 0 = "LoopConfigStopCond,TrigTimeGtTend,2.0"
-Script 1 = "GetSysTime"
-Script 2 = "LoopSetStopCondition"
-Script 3 = "FGenInitiateGen"
-Script 4 = "SensorStart"
-Script 5 = "AnalysisInitialize"
-Script 6 = "GetLoopScript,Digitizer,Sync"
-Script 7 = "FGenAbortGen"
-Script 8 = "DigitizerAbort"
-Script 9 = "SensorStop"
-Script 10 = "AnalysisAbort"
+Script.<size(s)> = "15"
+Script 0 = "FGenGetFunctionClass"
+Script 1 = "AnalysisSetFunctionClass"
+Script 2 = "LoopConfigStopCond,TrigTimeGtTend,10.0"
+Script 3 = "GetSysTime"
+Script 4 = "LoopSetStopCondition"
+Script 5 = "FGenInitiateGen"
+Script 6 = "SensorStart"
+Script 7 = "AnalysisInitialize"
+Script 8 = "GetLoopScript,Digitizer,Sync"
+Script 9 = "FGenAbortGen"
+Script 10 = "DigitizerAbort"
+Script 11 = "SensorStop"
+Script 12 = "AnalysisAbort"
+Script 13 = "DigitizerClose"
+Script 14 = "FGenClose"
 
 [clConfig]
 F0 = "50"
-SettlingTime = "7.000000"
+SettlingTime = "0.000000"
 AnalysisCycles = "3.000000"
 SampleRate = "4800.000000"
 NumChannels = "6"
