--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
@@ -6,9 +6,9 @@ Type = PMU
 
 [Script]
 Script.<size(s)> = "15"
-Script 0 = "FGenGetFunctionClass"
-Script 1 = "AnalysisSetFunctionClass"
-Script 2 = "LoopConfigStopCond,TrigTimeGtTend,10.0"
+Script 0 = "FGenGetFunctionParams"
+Script 1 = "AnalysisSetFunctionParams"
+Script 2 = "LoopConfigStopCond,TrigTimeGtTend,20.0"
 Script 3 = "GetSysTime"
 Script 4 = "LoopSetStopCondition"
 Script 5 = "FGenInitiateGen"
@@ -24,7 +24,7 @@ Script 14 = "FGenClose"
 
 [clConfig]
 F0 = "50"
-SettlingTime = "0.000000"
+SettlingTime = "0.140000"
 AnalysisCycles = "3.000000"
 SampleRate = "4800.000000"
 NumChannels = "6"
@@ -42,4 +42,4 @@ Accessors:FunctionIniFilePath = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
 MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 
 [DlyCorr]
-DlyCorr = "<size(s)=6> 697 657 735 -95 -96 -93"
+DlyCorr = "<size(s)=6> 697 657 735 -152 -153 -150"
