Separated compiled code for Framework/AddLogMsg.vi.  Modifications to some .ini files to support automated testing,

--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -5,9 +5,10 @@ Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 Type = "Dyn3 PMU Cal"
 
 [Script]
-Script.<size(s)> = "2"
-Script 0 = "SyncGetLockStatus"
-Script 1 = "SyncCheckLock"
+Script.<size(s)> = "3"
+Script 0 = "ErrorSeverity,Abort"
+Script 1 = "SyncGetLockStatus"
+Script 2 = "SyncCheckLock"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
@@ -35,7 +36,7 @@ TimeRefType = "GPS"
 0.Type = "Connect"
 0.TrigTime = "FALSE"
 1.Name = "Digitizer_TrigTime"
-1.DestTerm = "PXI_Trig7"
+1.DestTerm = "PXI_Trig6"
 1.SrcTerm = ""
 1.SyncClk = "SyncClkAsync"
 1.Edge = "0"
@@ -73,7 +74,7 @@ TimeRefType = "GPS"
 1.TrigTime = "FALSE"
 2.Name = "SamplerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
-2.ClkTerminal = "PXI_Trig2"
+2.ClkTerminal = "PXI_Trig4"
 2.Frequency = "0.000000"
 2.DutyCycle = "0.000000"
 2.ClkType = "TrigClk"
