--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
@@ -8,19 +8,25 @@ Type = PMU
 Script.<size(s)> = "15"
 Script 0 = "FGenGetFunctionParams"
 Script 1 = "AnalysisSetFunctionParams"
-Script 2 = "LoopConfigStopCond,TrigTimeGtTend,20.0"
+Script 2 = "LoopConfigStopCond,AnalysisIdle,Idle"
 Script 3 = "GetSysTime"
 Script 4 = "LoopSetStopCondition"
 Script 5 = "FGenInitiateGen"
 Script 6 = "SensorStart"
 Script 7 = "AnalysisInitialize"
-Script 8 = "GetLoopScript,Digitizer,Sync"
+Script 8 = "GetLoopScript,Digitizer,Analysis"
 Script 9 = "FGenAbortGen"
 Script 10 = "DigitizerAbort"
 Script 11 = "SensorStop"
 Script 12 = "AnalysisAbort"
 Script 13 = "DigitizerClose"
 Script 14 = "FGenClose"
+
+[LoopScript]
+LoopScript.<size(s)> = "2"
+LoopScript 0 = "AnalysisGetState"
+LoopScript 1 = "LoopUntilDone"
+
 
 [clConfig]
 F0 = "50"
@@ -43,3 +49,6 @@ MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 
 [DlyCorr]
 DlyCorr = "<size(s)=6> 697 657 735 -152 -153 -150"
+
+[Duration]
+Duration = "5.280000"
