--- a/UserFiles/Plugins/Analysis/FFT/INRIM_Analysis.ini
+++ b/UserFiles/Plugins/Analysis/FFT/INRIM_Analysis.ini
@@ -2,25 +2,26 @@
 Path = "..\..\AnalysisPlugins\FftClass\Fft.lvclass"
 
 [Type]
-Type = FFT
+Type = INRIM_Comp
 
 [Script]
-Script.<size(s)> = "10"
-Script 0 = "LoopConfigStopCond,TrigtimeGtTend,1.0"
+Script.<size(s)> = "11"
+Script 0 = "LoopConfigStopCond,TimeGtEnd,5.0"
 Script 1 = "GetSysTime"
 Script 2 = "LoopSetStopCondition"
 Script 3 = "FGenInitiateGen"
-Script 4 = "AnalysisInitialize"
-Script 5 = "GetLoopScript,Digitizer,Sync"
-Script 6 = "FGenAbortGen"
-Script 7 = "DigitizerAbort"
-Script 8 = "DigitizerClose
-Script 9 = "FGenClose"
+script 4 = "Wait,10000"
+Script 5 = "AnalysisInitialize"
+Script 6 = "GetLoopScript,Digitizer,Sync"
+Script 7 = "FGenAbortGen"
+Script 8 = "DigitizerAbort"
+Script 9 = "DigitizerClose"
+Script 10 = "FGenClose"
 
 [clConfig]
-F0 = "5000"
-SettlingTime = "7.000000"
-AnalysisCycles = "20.000000"
+F0 = "1000"
+SettlingTime = "0.000000"
+AnalysisCycles = "100.000000"
 SampleRate = "100000.000000"
 NumChannels = "1"
 TsOffset = "start"
@@ -32,4 +33,4 @@ unwrap phase (F) = "FALSE"
 convert to degree (F) = "FALSE"
 
 [WindowFunction]
-WindowFunction = "1"
+WindowFunction = "0"
