Module updates and .ini file commits.

--- a/UserFiles/Plugins/Analysis/FFT/INRIM_Analysis.ini
+++ b/UserFiles/Plugins/Analysis/FFT/INRIM_Analysis.ini
@@ -6,22 +6,27 @@ Type = INRIM_Comp
 
 [Script]
 Script.<size(s)> = "11"
-Script 0 = "LoopConfigStopCond,TimeGtEnd,5.0"
+Script 0 = "LoopConfigStopCond,AnalysisIdle,Idle"
 Script 1 = "GetSysTime"
 Script 2 = "LoopSetStopCondition"
 Script 3 = "FGenInitiateGen"
 script 4 = "Wait,10000"
 Script 5 = "AnalysisInitialize"
-Script 6 = "GetLoopScript,Digitizer,Sync"
+Script 6 = "GetLoopScript,Digitizer,Analysis"
 Script 7 = "FGenAbortGen"
 Script 8 = "DigitizerAbort"
 Script 9 = "DigitizerClose"
 Script 10 = "FGenClose"
 
+[LoopScript]
+LoopScript.<size(s)> = "2"
+LoopScript 0 = "AnalysisGetState"
+LoopScript 1 = "LoopUntilDone"
+
 [clConfig]
-F0 = "1000"
+F0 = "50"
 SettlingTime = "0.000000"
-AnalysisCycles = "100.000000"
+AnalysisCycles = "50.000000"
 SampleRate = "100000.000000"
 NumChannels = "1"
 TsOffset = "start"
@@ -34,3 +39,6 @@ convert to degree (F) = "FALSE"
 
 [WindowFunction]
 WindowFunction = "0"
+
+[Duration]
+Duration = "5.000000"
