--- a/UserFiles/Plugins/Digitizer/NiDaqMx/INRM_1Ch.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/INRM_1Ch.ini
@@ -66,7 +66,7 @@ TrigTerm = "PXI1Slot7/PFI0"
 SyncHandle = "PXI1Slot4"
 
 [Sync]
-Handle = "PXI1Slot7"
+Handle = "PXI1Slot7 (4)"
 SrcTerm = ""
 DestTerm = "PXI_Trig7"
 
