--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
@@ -27,6 +27,16 @@ LoopScript.<size(s)> = "2"
 LoopScript 0 = "AnalysisGetState"
 LoopScript 1 = "LoopUntilDone"
 
+[AbortScript]
+AbortScript.<size(s)> = "7"
+AbortScript 0 = "FGenAbortGen"
+AbortScript 1 = "DigitizerAbort"
+AbortScript 2 = "SensorStop"
+AbortScript 3 = "AnalysisAbort"
+AbortScript 4 = "DigitizerClose"
+AbortScript 5 = "FGenClose"
+AbortScript 6 = "Stop"
+
 
 [clConfig]
 F0 = "50"
