INRIM Analysis and Module commits

--- a/UserFiles/Plugins/Analysis/FFT/INRIM_Analysis.ini
+++ b/UserFiles/Plugins/Analysis/FFT/INRIM_Analysis.ini
@@ -5,23 +5,31 @@ Path = "..\..\AnalysisPlugins\FftClass\Fft.lvclass"
 Type = INRIM_Comp
 
 [Script]
-Script.<size(s)> = "11"
+Script.<size(s)> = "10"
 Script 0 = "LoopConfigStopCond,AnalysisIdle,Idle"
 Script 1 = "GetSysTime"
 Script 2 = "LoopSetStopCondition"
 Script 3 = "FGenInitiateGen"
-script 4 = "Wait,10000"
-Script 5 = "AnalysisInitialize"
-Script 6 = "GetLoopScript,Digitizer,Analysis"
-Script 7 = "FGenAbortGen"
-Script 8 = "DigitizerAbort"
-Script 9 = "DigitizerClose"
-Script 10 = "FGenClose"
+Script 4 = "AnalysisInitialize"
+Script 5 = "GetLoopScript,Digitizer,Analysis"
+Script 6 = "FGenAbortGen"
+Script 7 = "DigitizerAbort"
+Script 8 = "DigitizerClose"
+Script 9 = "FGenClose"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
 LoopScript 0 = "AnalysisGetState"
 LoopScript 1 = "LoopUntilDone"
+
+[AbortScript]
+AbortScript.<size(s)> = "6"
+AbortScript 0 = "FGenAbortGen"
+AbortScript 1 = "DigitizerAbort"
+AbortScript 2 = "AnalysisAbort"
+AbortScript 3 = "DigitizerClose"
+AbortScript 4 = "FGenClose"
+AbortScript 5 = "Stop"
 
 [clConfig]
 F0 = "50"
