--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/INRM.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/INRM.ini
@@ -90,6 +90,11 @@ TimeRefType = "GPS"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
 4.TrigTime = "FALSE"
+0.Delay = "0.000000"
+1.Delay = "0.000000"
+2.Delay = "0.000000"
+3.Delay = "0.000000"
+4.Delay = "-0.050000"
 
 [SyncWinClk]
 SyncWinClk = "FALSE"
