--- a/UserFiles/Plugins/Analysis/SaveWaveforms/SaveWaveforms.ini
+++ b/UserFiles/Plugins/Analysis/SaveWaveforms/SaveWaveforms.ini
@@ -1,17 +1,17 @@
 [Path to Class]
-Path = "..\..\AnalysisPlugins\FftClass\Fft.lvclass"
+Path = "..\..\AnalysisPlugins\SaveWaveformsClass\SaveWaveforms.lvclass"
 
 [Type]
-Type = INRIM_Comp
+Type = Analyse Waveforms
 
 [Script]
 Script.<size(s)> = "10"
-Script 0 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 0 = "LoopConfigStopCond,TimeGtEnd,1"
 Script 1 = "GetSysTime"
 Script 2 = "LoopSetStopCondition"
 Script 3 = "FGenInitiateGen"
 Script 4 = "AnalysisInitialize"
-Script 5 = "GetLoopScript,Digitizer,Analysis"
+Script 5 = "GetLoopScript,Digitizer,Sync"
 Script 6 = "FGenAbortGen"
 Script 7 = "DigitizerAbort"
 Script 8 = "DigitizerClose"
@@ -31,22 +31,31 @@ AbortScript 3 = "DigitizerClose"
 AbortScript 4 = "FGenClose"
 AbortScript 5 = "Stop"
 
-[clConfig]
-F0 = "50"
-SettlingTime = "0.000000"
-AnalysisCycles = "50.000000"
-SampleRate = "100000.000000"
-NumChannels = "1"
+[Default Params]
+F0 = "60"
+SettlingTime = "7"
+AnalysisCycles = "20"
+SampleRate = "4800"
+NumChannels = "6"
 TsOffset = "start"
-%TsOffset: 1 = start, 2 = middle, 3 = end
 
-[FftView]
-dB On (F) = "FALSE"
-unwrap phase (F) = "FALSE"
-convert to degree (F) = "FALSE"
+[DelayCorr]
+DelayCorr.<size(s)> = "6"
+DelayCorr 0 = "0"
+DelayCorr 1 = "0"
+DelayCorr 2 = "0"
+DelayCorr 3 = "0"
+DelayCorr 4 = "0"
+DelayCorr 5 = "0"
 
-[WindowFunction]
-WindowFunction = "0"
+[MagCorr]
+MagCorr.<size(s)> = "6"
+MagCorr 0 = "1"
+MagCorr 1 = "1"
+MagCorr 2 = "1"
+MagCorr 3 = "1"
+MagCorr 4 = "1"
+MagCorr 5 = "1"
 
 [Duration]
 Duration = "1.000000"
