--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_Digitizer.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_Digitizer.ini
@@ -2,24 +2,55 @@
 Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 
 [Type]
-Type = "Dyn3 Digitizer"
+Type = "SaveWaveform"
 
 [Script]
-Script.<size(s)> = "2"
-Script 0 = "SyncGetLockStatus"
-Script 1 = "SyncCheckLock"
+Script.<size(s)> = "3"
+Script 0 = "ErrorSeverity,Abort"
+Script 1 = "SyncGetLockStatus"
+Script 2 = "SyncCheckLock"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
-LoopScript 0 = "SyncGetTrigTimestamp,1_PPS,2.0"
+LoopScript 0 = "GetSysTime"
 LoopScript 1 = "LoopUntilDone"
-
 [Handle]
 RefClk = "PXI1Slot7"
 Timing = "PXI1Slot4"
+RefClkSource = "PXI_Trig0"
 
 [TimeRefType]
 TimeRefType = "GPS"
+
+[Triggers]
+.<size(s)> = "2"
+0.Name = "PPS_Trigger"
+0.DestTerm = "PXI_Trig3"
+0.SrcTerm = "PFI0"
+0.SyncClk = "SyncClkAsync"
+0.Edge = "0"
+0.Invert? = "0"
+0.Initiated = "FALSE"
+0.Type = "Connect"
+0.TrigTime = "FALSE"
+1.Name = "Digitizer_TrigTime"
+1.DestTerm = "PXI_Trig7"
+1.SrcTerm = ""
+1.SyncClk = "SyncClkAsync"
+1.Edge = "0"
+1.Invert? = "0"
+1.Initiated = "FALSE"
+1.Type = "TrigTime"
+1.TrigTime = "FALSE"
+2.Name = "Connect_1"
+2.DestTerm = "PFI2"
+2.SrcTerm = "PXI_Trig2"
+2.SyncClk = "SyncClkAsync"
+2.Edge = "0"
+2.Invert? = "0"
+2.Initiated = "FALSE"
+2.Type = "Connect"
+2.TrigTime = "FALSE"
 
 [Clocks]
 .<size(s)> = "5"
@@ -33,7 +64,7 @@ TimeRefType = "GPS"
 0.TrigTime = "FALSE"
 1.Name = "FGenClk"
 1.RefClk = "Synchronization Clock (Full Speed)"
-1.ClkTerminal = "PXI_Trig0"
+1.ClkTerminal = "PXI_Trig1"
 1.Frequency = "0.000000"
 1.DutyCycle = "0.000000"
 1.ClkType = "TrigClk"
@@ -41,7 +72,7 @@ TimeRefType = "GPS"
 1.TrigTime = "FALSE"
 2.Name = "SamplerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
-2.ClkTerminal = "PXI_Trig1"
+2.ClkTerminal = "PXI_Trig2"
 2.Frequency = "0.000000"
 2.DutyCycle = "0.000000"
 2.ClkType = "TrigClk"
@@ -49,50 +80,25 @@ TimeRefType = "GPS"
 2.TrigTime = "FALSE"
 3.Name = "1_PPS"
 3.RefClk = ""
-3.ClkTerminal = "/PXI1Slot7/PFI1"
+3.ClkTerminal = "/PXI1Slot7/PFI0"
 3.Frequency = "1.000000"
 3.DutyCycle = "0.500000"
 3.ClkType = "FreqClk"
 3.Initiated = "FALSE"
-3.TrigTime = "FALSE"
+3.TrigTime = "TRUE"
 4.Name = "Pgm_PPS"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
-4.Frequency = "10.000000"
+4.Frequency = "1000.000000"
 4.DutyCycle = "0.500000"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
 4.TrigTime = "FALSE"
-
-[Triggers]
-.<size(s)> = "3"
-0.Name = "Timed_1"
-0.DestTerm = "/PXI1Slot7/PFI0"
-0.SrcTerm = ""
-0.SyncClk = ""
-0.Edge = "0"
-0.Invert? = "0"
-0.Initiated = "FALSE"
-0.Type = "Timed"
-0.TrigTime = "FALSE"
-1.Name = "Software_1"
-1.DestTerm = "PFI1"
-1.SrcTerm = ""
-1.SyncClk = "SyncClkAsync"
-1.Edge = "0"
-1.Invert? = "0"
-1.Initiated = "FALSE"
-1.Type = "Software"
-1.TrigTime = "FALSE"
-2.Name = "Connect_1"
-2.DestTerm = "PFI2"
-2.SrcTerm = "PXI_Trig1"
-2.SyncClk = "SyncClkAsync"
-2.Edge = "0"
-2.Invert? = "0"
-2.Initiated = "FALSE"
-2.Type = "Connect"
-2.TrigTime = "FALSE"
+0.Delay = "0.000000"
+1.Delay = "0.000000"
+2.Delay = "0.000000"
+3.Delay = "0.000000"
+4.Delay = "-0.050000"
 
 [SyncWinClk]
 SyncWinClk = "FALSE"
