Added .ini files used during absolute phase calibration research.  (will likely remove some of these later)

--- a/UserFiles/Plugins/Analysis/SaveWaveforms/SaveWaveforms.ini
+++ b/UserFiles/Plugins/Analysis/SaveWaveforms/SaveWaveforms.ini
@@ -5,17 +5,18 @@ Path = "..\..\AnalysisPlugins\SaveWaveformsClass\SaveWaveforms.lvclass"
 Type = Analyse Waveforms
 
 [Script]
-Script.<size(s)> = "10"
+Script.<size(s)> = "11"
 Script 0 = "LoopConfigStopCond,TimeGtEnd,1"
-Script 1 = "GetSysTime"
-Script 2 = "LoopSetStopCondition"
-Script 3 = "FGenInitiateGen"
-Script 4 = "AnalysisInitialize"
-Script 5 = "GetLoopScript,Digitizer,Sync"
-Script 6 = "FGenAbortGen"
-Script 7 = "DigitizerAbort"
-Script 8 = "DigitizerClose"
-Script 9 = "FGenClose"
+Script 1 = "FGenInitiateGen"
+Script 2 = "Wait,10000"
+Script 3 = "GetSysTime"
+Script 4 = "LoopSetStopCondition"
+Script 5 = "AnalysisInitialize"
+Script 6 = "GetLoopScript,Digitizer,Sync"
+Script 7 = "FGenAbortGen"
+Script 8 = "DigitizerAbort"
+Script 9 = "DigitizerClose"
+Script 10 = "FGenClose"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
