--- a/UserFiles/Plugins/FGen/NiPxi6733/INRM_1Ch.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/INRM_1Ch.ini
@@ -16,7 +16,7 @@ RefClk = "0"
 
 [Timebase]
 source = "PXI_Trig1"
-rate = "18000000.000000"
+rate = "20000000.000000"
 
 [SampleRate]
 SampleRate = "500000.000000"
@@ -27,13 +27,13 @@ Channel.<size(s)> = "1"
 Channel 0.Name = "ao0"
 Channel 0.Enabled = "TRUE"
 Channel 0.Operation = "Continuous"
-Channel 0.Impedance (50) = "10.000000"
+Channel 0.Impedance (50) = "50.000000"
 Channel 0.Handle = "PXI1Slot6"
 Channel 0.Connected = "FALSE"
-Channel 0.Mode (Function) = "Function"
+Channel 0.Mode (Function) = "Arbitrary"
 
 [FunctionIniFilePAth]
-Path = "StandardFunction\\1Phase_Sine.ini"
+Path = "PmuTestFunctions\\50_Hz_1Ch_100KSPS.ini"
 
 [Triggers]
 Count = "1"
@@ -43,3 +43,8 @@ Triggers 0.Slope = "Positive"
 Triggers 0.Threshold = "0.000000"
 Triggers 0.Delay = "0.000000"
 Triggers 0.TriggerType = "Start"
+
+[ExportSignal]
+signal = "12487"
+Destination = "/PXI1Slot6/PFI5"
+Route = "none"
