--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/INRM.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/INRM.ini
@@ -62,7 +62,7 @@ TimeRefType = "GPS"
 1.RefClk = "Synchronization Clock (Full Speed)"
 1.ClkTerminal = "PXI_Trig1"
 1.Frequency = "0.000000"
-1.DutyCycle = "0.000000"
+1.DutyCycle = "0.500000"
 1.ClkType = "TrigClk"
 1.Initiated = "FALSE"
 1.TrigTime = "FALSE"
@@ -75,7 +75,7 @@ TimeRefType = "GPS"
 2.Initiated = "FALSE"
 2.TrigTime = "FALSE"
 3.Name = "1_PPS"
-3.RefClk = ""
+3.RefClk = "Synchronization "
 3.ClkTerminal = "/PXI1Slot7/PFI0"
 3.Frequency = "1.000000"
 3.DutyCycle = "0.500000"
