--- a/UserFiles/Plugins/Digitizer/NiDaqMx/INRiM_5Ch.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/INRiM_5Ch.ini
@@ -2,16 +2,16 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = PMU Cal
+Type = "INRiM_5Ch"
 
 [Script]
 Script.<size(s)> = "7"
-Script 0 = "DigitizerInitialize"
-Script 1 = "Wait,10"
-Script 2 = "DigitizerConfigChannels"
-Script 3 = "DigitizerConfigAcquisition"
-Script 4 = "SyncGetInfo,Digitizer_TrigTime"
-Script 5 = "DigitizerWriteSyncInfo"
+Script 0 = "SyncGetInfo,Digitizer_TrigTime"
+Script 1 = "DigitizerWriteSyncInfo"
+Script 2 = "DigitizerInitialize"
+Script 3 = "Wait,10"
+Script 4 = "DigitizerConfigChannels"
+Script 5 = "DigitizerConfigAcquisition"
 Script 6 = "DigitizerConfigTrigger"
 
 [LoopScript]
@@ -24,8 +24,8 @@ LoopScript 2 = "AnalysisWriteWaveforms"
 Handle = PXI1SLOT3
 
 [Acquisition]
-SampleRate = "48000.000000"
-RecordSize = "48000"
+SampleRate = "100000.000000"
+RecordSize = "100000"
 NumRecords = "1"
 SampleMode = "0"
 Timeout (ms) = "5000"
@@ -49,13 +49,26 @@ Sources 1.Level = "0.000000"
 Sources 1.Slope = "Positive"
 Sources 1.Type = "Edge"
 
+[SampleClock]
+Type = "External"
+Source = "PXI_Trig2"
+TimebaseRate = "18000000.000000"
+sample mode = "10123"
+TrigTerm = "PXI1Slot7/PFI0"
+SyncHandle = "PXI1Slot4"
+
+[Sync]
+Handle = "PXI1Slot7"
+SrcTerm = ""
+DestTerm = "PXI_Trig7"
+
 [Channel_0]
 Name = "ai0"
 Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "10.000000"
+Range = "1.000000"
 
 [Channel_1]
 Name = "ai1"
@@ -63,15 +76,7 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "10.000000"
-
-[SampleClock]
-Type = "External"
-Source = "PXI_Trig4"
-TimebaseRate = "18000000.000000"
-sample mode = "10123"
-TrigTerm = "PXI1Slot7/PFI0"
-SyncHandle = "PXI1Slot4"
+Range = "1.000000"
 
 [Channel_2]
 Name = "ai2"
@@ -79,7 +84,7 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "10.000000"
+Range = "1.000000"
 
 [Channel_3]
 Name = "ai3"
@@ -87,7 +92,7 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "10.000000"
+Range = "1.000000"
 
 [Channel_4]
 Name = "ai4"
@@ -95,17 +100,4 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "10.000000"
-
-[Channel_5]
-Name = "ai5"
-Enabled = "TRUE"
-InputImpedance = "50.000000"
-Coupling = "AC"
-Offset = "0.000000"
-Range = "10.000000"
-
-[Sync]
-Handle = "PXI1Slot7"
-SrcTerm = ""
-DestTerm = "PXI_Trig6"
+Range = "5.000000"
