--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PRS_FGen.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PRS_FGen.ini
@@ -2,16 +2,17 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = (obsolete)
+Type = "PRS_FGen"
 
 [Script]
-Script.<size(s)> = "6"
-Script 0 = "DigitizerInitialize"
-Script 1 = "DigitizerConfigChannels"
-Script 2 = "DigitizerConfigAcquisition"
-Script 3 = "DigitizerConfigTrigger"
-Script 4 = "GetLoopScript,Digitizer,Sync"
-Script 5 = "DigitizerAbort"
+Script.<size(s)> = "7"
+Script 0 = "SyncGetInfo,Digitizer_TrigTime"
+Script 1 = "DigitizerWriteSyncInfo"
+Script 2 = "DigitizerInitialize"
+Script 3 = "Wait,10"
+Script 4 = "DigitizerConfigChannels"
+Script 5 = "DigitizerConfigAcquisition"
+Script 6 = "DigitizerConfigTrigger"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -23,8 +24,8 @@ LoopScript 2 = "AnalysisWriteWaveforms"
 Handle = PXI1SLOT3
 
 [Acquisition]
-SampleRate = "4800.000000"
-RecordSize = "1200"
+SampleRate = "100000.000000"
+RecordSize = "100000"
 NumRecords = "1"
 SampleMode = "0"
 Timeout (ms) = "5000"
@@ -35,12 +36,32 @@ Delay = "0.000000"
 Holdoff = "0.000000"
 PretriggerSamples = "0"
 Sources.<size(s)> = "1"
-Sources 0.Name = "/PXI1Slot7/PFI1"
+Sources 0.Name = "PXI_Trig4"
 Sources 0.Coupling = "AC"
 Sources 0.Hysteresis = "0.000000"
 Sources 0.Level = "0.000000"
 Sources 0.Slope = "Positive"
 Sources 0.Type = "Edge"
+Sources 1.Name = "bar"
+Sources 1.Coupling = "AC"
+Sources 1.Hysteresis = "0.000000"
+Sources 1.Level = "0.000000"
+Sources 1.Slope = "Positive"
+Sources 1.Type = "Edge"
+
+[SampleClock]
+Type = "External"
+Source = "PXI_Trig2"
+TimebaseRate = "18000000.000000"
+sample mode = "10123"
+TrigTerm = "PXI1Slot7/PFI0"
+SyncHandle = "PXI1Slot4"
+
+[Sync]
+Handle = "PXI1Slot7 (3)"
+SrcTerm = ""
+DestTerm = "PXI_Trig7"
+0000"
 
 [Channel_0]
 Name = "ai0"
@@ -48,7 +69,7 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "10.000000"
+Range = "5.000000"
 
 [Channel_1]
 Name = "ai1"
@@ -56,10 +77,4 @@ Enabled = "TRUE"
 InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "10.000000"
-
-[SampleClock]
-Type = "External"
-Source = "PXI_Trig1"
-TimebaseRate = "18000000.000000"
-sample mode = "10123"
+Range = "5.000000"
