--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU_Sim.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU_Sim.ini
@@ -2,7 +2,7 @@
 Path = "..\..\FgenPlugins\NiPxi6733Class\NiPxi6733.lvclass"
 
 [Type]
-Type = PMU Cal
+Type = "PMU_Sim"
 
 [Script]
 Script.<size(s)> = "4"
@@ -16,7 +16,7 @@ RefClk = "0"
 
 [Timebase]
 source = "PXI_Trig1"
-rate = "20000000.000000"
+rate = "18000000.000000"
 
 [SampleRate]
 SampleRate = "48000.000000"
@@ -30,7 +30,7 @@ Channel 0.Operation = "Continuous"
 Channel 0.Impedance (50) = "10.000000"
 Channel 0.Handle = "PXI1Slot6"
 Channel 0.Connected = "FALSE"
-Channel 0.Mode (Function) = "Function"
+Channel 0.Mode (Function) = "Arbitrary"
 Channel 1.Name = "ao1"
 Channel 1.Enabled = "TRUE"
 Channel 1.Operation = "Continuous"
