--- a/UserFiles/Plugins/Sensor/Sim_Ideal_PMU/Sim_Ideal_PMU.ini
+++ b/UserFiles/Plugins/Sensor/Sim_Ideal_PMU/Sim_Ideal_PMU.ini
@@ -1,8 +1,9 @@
 [Path to Class]
-Path = "..\..\SensorPlugins\C37.118_SimClass\C37.118 Sim.lvclass"
+Path = "..\..\SensorPlugins\Sim_Ideal_PMU\Sim_Ideal_PMU.lvclass"
 
 [Type]
-Type = C37.118 Sim
+Type = Sim Ideal PMU
+
 
 [PhaseArray]
 PhaseArray.<size(s)> = "8"
@@ -20,11 +21,8 @@ Class = "M"
 Fs = "50"
 F0 = "50"
 FSamp = "800"
-SettlingTime = "50.000000"
-T0 = "3670074765.000000"
+SettlingTime = "7.000000"
+T0 = "3597854583.000000"
 
 [FunctionIniFilePAth]
-Path = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
-
-[Time]
-Time = "5.000000"
+Path = "..\..\..\..\..\..\..\FGen\MemberClasses\PmuTestFunctions\50F0_50Fs_FreqRng.ini
