--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
@@ -2,7 +2,7 @@
 Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 
 [Type]
-Type = "Dyn3 PMU Cal"
+Type = "AbsPhase"
 
 [Script]
 Script.<size(s)> = "3"
@@ -22,7 +22,7 @@ TimeRefType = "GPS"
 .<size(s)> = "2"
 0.Name = "PPS_Trigger"
 0.DestTerm = "PXI_Trig3"
-0.SrcTerm = "PFI1"
+0.SrcTerm = "PFI0"
 0.SyncClk = "SyncClkAsync"
 0.Edge = "0"
 0.Invert? = "0"
@@ -30,7 +30,7 @@ TimeRefType = "GPS"
 0.Type = "Connect"
 0.TrigTime = "FALSE"
 1.Name = "Digitizer_TrigTime"
-1.DestTerm = "PXI_Trig6"
+1.DestTerm = "PXI_Trig7"
 1.SrcTerm = ""
 1.SyncClk = "SyncClkAsync"
 1.Edge = "0"
@@ -38,15 +38,7 @@ TimeRefType = "GPS"
 1.Initiated = "FALSE"
 1.Type = "TrigTime"
 1.TrigTime = "FALSE"
-2.Name = "Connect_1"
-2.DestTerm = "PFI2"
-2.SrcTerm = "PXI_Trig2"
-2.SyncClk = "SyncClkAsync"
-2.Edge = "0"
-2.Invert? = "0"
-2.Initiated = "FALSE"
-2.Type = "Connect"
-2.TrigTime = "FALSE"
+
 
 [Clocks]
 .<size(s)> = "5"
@@ -58,42 +50,42 @@ TimeRefType = "GPS"
 0.ClkType = "DDS"
 0.Initiated = "FALSE"
 0.TrigTime = "FALSE"
+0.Delay = "0.000000"
 1.Name = "FGenClk"
 1.RefClk = "Synchronization Clock (Full Speed)"
 1.ClkTerminal = "PXI_Trig1"
 1.Frequency = "0.000000"
-1.DutyCycle = "0.000000"
+1.DutyCycle = "0.500000"
 1.ClkType = "TrigClk"
 1.Initiated = "FALSE"
 1.TrigTime = "FALSE"
+1.Delay = "0.000000"
 2.Name = "SamplerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
-2.ClkTerminal = "PXI_Trig4"
+2.ClkTerminal = "PXI_Trig2"
 2.Frequency = "0.000000"
 2.DutyCycle = "0.000000"
 2.ClkType = "TrigClk"
 2.Initiated = "FALSE"
 2.TrigTime = "FALSE"
+2.Delay = "0.000000"
 3.Name = "1_PPS"
-3.RefClk = ""
-3.ClkTerminal = "/PXI1Slot7/PFI1"
+3.RefClk = "Synchronization "
+3.ClkTerminal = "/PXI1Slot7/PFI0"
 3.Frequency = "1.000000"
 3.DutyCycle = "0.500000"
 3.ClkType = "FreqClk"
 3.Initiated = "FALSE"
 3.TrigTime = "TRUE"
+3.Delay = "0.000000"
 4.Name = "Pgm_PPS"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
-4.Frequency = "10.000000"
+4.Frequency = "5000.000000"
 4.DutyCycle = "0.500000"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
 4.TrigTime = "FALSE"
-0.Delay = "0.000000"
-1.Delay = "0.000000"
-2.Delay = "0.000000"
-3.Delay = "0.000000"
 4.Delay = "0.000000"
 
 [SyncWinClk]
