--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/OffsetDTrigger.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/OffsetDTrigger.ini
@@ -2,13 +2,18 @@
 Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 
 [Type]
-Type = "Dyn3 PMU Cal"
+Type = "Offset Digi Trigger"
 
 [Script]
 Script.<size(s)> = "3"
 Script 0 = "ErrorSeverity,Abort"
 Script 1 = "SyncGetLockStatus"
 Script 2 = "SyncCheckLock"
+
+[LoopScript]
+LoopScript.<size(s)> = "2"
+LoopScript 0 = "GetSysTime"
+LoopScript 1 = "LoopUntilDone"
 
 [Handle]
 RefClk = "PXI1Slot7"
@@ -19,10 +24,10 @@ RefClkSource = "PXI_Trig0"
 TimeRefType = "GPS"
 
 [Triggers]
-.<size(s)> = "2"
+.<size(s)> = "3"
 0.Name = "PPS_Trigger"
-0.DestTerm = "PXI_Trig3"
-0.SrcTerm = "PFI1"
+0.SrcTerm = "PXI_Trig3"
+0.DestTerm = "/PXI1Slot7/PFI0"
 0.SyncClk = "SyncClkAsync"
 0.Edge = "0"
 0.Invert? = "0"
@@ -30,7 +35,7 @@ TimeRefType = "GPS"
 0.Type = "Connect"
 0.TrigTime = "FALSE"
 1.Name = "Digitizer_TrigTime"
-1.DestTerm = "PXI_Trig6"
+1.DestTerm = "PXI_Trig7"
 1.SrcTerm = ""
 1.SyncClk = "SyncClkAsync"
 1.Edge = "0"
@@ -38,9 +43,9 @@ TimeRefType = "GPS"
 1.Initiated = "FALSE"
 1.Type = "TrigTime"
 1.TrigTime = "FALSE"
-2.Name = "Connect_1"
-2.DestTerm = "PFI2"
-2.SrcTerm = "PXI_Trig2"
+2.Name = "Digitizer Trigger"
+2.DestTerm = "PXI_Trig4"
+2.SrcTerm = "/PXI1Slot7/PFI2"
 2.SyncClk = "SyncClkAsync"
 2.Edge = "0"
 2.Invert? = "0"
@@ -49,11 +54,11 @@ TimeRefType = "GPS"
 2.TrigTime = "FALSE"
 
 [Clocks]
-.<size(s)> = "5"
+.<size(s)> = "6"
 0.Name = "DdsClk"
 0.RefClk = "DDS"
 0.ClkTerminal = "ClkOut"
-0.Frequency = "18000000.000000"
+0.Frequency = "20000000.000000"
 0.DutyCycle = "0.000000"
 0.ClkType = "DDS"
 0.Initiated = "FALSE"
@@ -68,7 +73,7 @@ TimeRefType = "GPS"
 1.TrigTime = "FALSE"
 2.Name = "SamplerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
-2.ClkTerminal = "PXI_Trig4"
+2.ClkTerminal = "PXI_Trig2"
 2.Frequency = "0.000000"
 2.DutyCycle = "0.000000"
 2.ClkType = "TrigClk"
@@ -76,16 +81,16 @@ TimeRefType = "GPS"
 2.TrigTime = "FALSE"
 3.Name = "1_PPS"
 3.RefClk = ""
-3.ClkTerminal = "/PXI1Slot7/PFI1"
+3.ClkTerminal = "PXI_Trig3"
 3.Frequency = "1.000000"
 3.DutyCycle = "0.500000"
 3.ClkType = "FreqClk"
 3.Initiated = "FALSE"
 3.TrigTime = "TRUE"
-4.Name = "Pgm_PPS"
+4.Name = "Digi_Trigger"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
-4.Frequency = "10.000000"
+4.Frequency = "1.000000"
 4.DutyCycle = "0.500000"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
@@ -95,6 +100,15 @@ TimeRefType = "GPS"
 2.Delay = "0.000000"
 3.Delay = "0.000000"
 4.Delay = "0.000000"
+5.Name = "PRS"
+5.RefClk = ""
+5.ClkTerminal = "/PXI1Slot7/PFI1"
+5.Frequency = "5000.000000"
+5.DutyCycle = "0.500000"
+5.ClkType = "FreqClk"
+5.Initiated = "FALSE"
+5.TrigTime = "FALSE"
+5.Delay = "0.000000"
 
 [SyncWinClk]
 SyncWinClk = "FALSE"
