Adding new.ini files.  Also this is the beginning of the sensor mod code separation.

--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Current.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Current.ini
@@ -2,7 +2,7 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = "INRiM_4Ch"
+Type = "AbsPhase_Current"
 
 [Script]
 Script.<size(s)> = "7"
@@ -52,7 +52,7 @@ Sources 1.Type = "Edge"
 [SampleClock]
 Type = "External"
 Source = "PXI_Trig2"
-TimebaseRate = "18000000.000000"
+TimebaseRate = "20000000.000000"
 sample mode = "10123"
 TrigTerm = "PXI1Slot7/PFI0"
 SyncHandle = "PXI1Slot4"
@@ -63,38 +63,47 @@ SrcTerm = ""
 DestTerm = "PXI_Trig7"
 
 [Channel_0]
-Name = "ai0"
-Enabled = "TRUE"
-InputImpedance = "50.000000"
-Coupling = "AC"
-Offset = "0.000000"
-Range = "10.000000"
-
-[Channel_1]
-Name = "ai1"
-Enabled = "TRUE"
-InputImpedance = "50.000000"
-Coupling = "AC"
-Offset = "0.000000"
-Range = "10.000000"
-
-[Channel_2]
-Name = "ai2"
-Enabled = "TRUE"
-InputImpedance = "50.000000"
-Coupling = "AC"
-Offset = "0.000000"
-Range = "10.000000"
-
-[Channel_3]
 Name = "ai3"
 Enabled = "TRUE"
-InputImpedance = "50.000000"
+InputImpedance = "1.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "5.000000"
+
+[Channel_1]
+Name = "ai4"
+Enabled = "TRUE"
+InputImpedance = "1.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "5.000000"
+
+[Channel_2]
+Name = "ai5"
+Enabled = "TRUE"
+InputImpedance = "1.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "5.000000"
+
+[Channel_3]
+Name = "ai6"
+Enabled = "TRUE"
+InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "5.000000"
 
 [ExportSignal]
 signal = "12487"
-Destination = "none"
+Destination = "/PXI1Slot3/PFI12"
 String = "none"
+Route = "none"
+
+[Channel_4]
+Name = ""
+Enabled = "FALSE"
+InputImpedance = "1.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "5.000000"
