--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal.ini
@@ -109,3 +109,8 @@ Range = "10.000000"
 Handle = "PXI1Slot7"
 SrcTerm = ""
 DestTerm = "PXI_Trig6"
+
+[ExportSignal]
+signal = "12487"
+Destination = "none"
+Route = "none"
