--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU_Cal.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU_Cal.ini
@@ -16,7 +16,7 @@ RefClk = "0"
 
 [Timebase]
 source = "PXI_Trig1"
-rate = "20000000.000000"
+rate = "18000000.000000"
 
 [SampleRate]
 SampleRate = "48000.000000"
@@ -73,8 +73,13 @@ Path = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
 [Triggers]
 Count = "1"
 Triggers.<size(s)> = "1"
-Triggers 0.Source = "PXI_Trig3"
+Triggers 0.Source = "PXI_Trig2"
 Triggers 0.Slope = "Positive"
 Triggers 0.Threshold = "0.000000"
 Triggers 0.Delay = "0.000000"
 Triggers 0.TriggerType = "Start"
+
+[ExportSignal]
+signal = "12487"
+Destination = "none"
+Route = "none"
