--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/OffsetDTrigger.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/OffsetDTrigger.ini
@@ -23,6 +23,8 @@ RefClkSource = "PXI_Trig0"
 [TimeRefType]
 TimeRefType = "GPS"
 
+; Provides a separate trigger for the digitizer to facilitate equivalent time sampling
+; Digitizer TrigTime provides a more accurate timestamp for the digitizer output.
 [Triggers]
 .<size(s)> = "3"
 0.Name = "PPS_Trigger"
@@ -63,6 +65,7 @@ TimeRefType = "GPS"
 0.ClkType = "DDS"
 0.Initiated = "FALSE"
 0.TrigTime = "FALSE"
+0.Delay = "0.000000"
 1.Name = "FGenClk"
 1.RefClk = "Synchronization Clock (Full Speed)"
 1.ClkTerminal = "PXI_Trig1"
@@ -71,7 +74,8 @@ TimeRefType = "GPS"
 1.ClkType = "TrigClk"
 1.Initiated = "FALSE"
 1.TrigTime = "FALSE"
-2.Name = "SamplerClk"
+1.Delay = "0.000000"
+2.Name = "DigitizerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
 2.ClkTerminal = "PXI_Trig2"
 2.Frequency = "0.000000"
@@ -79,6 +83,7 @@ TimeRefType = "GPS"
 2.ClkType = "TrigClk"
 2.Initiated = "FALSE"
 2.TrigTime = "FALSE"
+2.Delay = "0.000000"
 3.Name = "1_PPS"
 3.RefClk = ""
 3.ClkTerminal = "PXI_Trig3"
@@ -87,6 +92,7 @@ TimeRefType = "GPS"
 3.ClkType = "FreqClk"
 3.Initiated = "FALSE"
 3.TrigTime = "TRUE"
+3.Delay = "0.000000"
 4.Name = "Digi_Trigger"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
@@ -95,10 +101,6 @@ TimeRefType = "GPS"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
 4.TrigTime = "FALSE"
-0.Delay = "0.000000"
-1.Delay = "0.000000"
-2.Delay = "0.000000"
-3.Delay = "0.000000"
 4.Delay = "0.000000"
 5.Name = "PRS"
 5.RefClk = ""
