--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Voltage.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Voltage.ini
@@ -2,7 +2,7 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = "INRiM_4Ch"
+Type = "AbsPhase_Voltage"
 
 [Script]
 Script.<size(s)> = "7"
@@ -36,7 +36,7 @@ Delay = "0.000000"
 Holdoff = "0.000000"
 PretriggerSamples = "0"
 Sources.<size(s)> = "1"
-Sources 0.Name = "PXI_Trig3"
+Sources 0.Name = "PXI_Trig4"
 Sources 0.Coupling = "AC"
 Sources 0.Hysteresis = "0.000000"
 Sources 0.Level = "0.000000"
@@ -52,7 +52,7 @@ Sources 1.Type = "Edge"
 [SampleClock]
 Type = "External"
 Source = "PXI_Trig2"
-TimebaseRate = "18000000.000000"
+TimebaseRate = "20000000.000000"
 sample mode = "10123"
 TrigTerm = "PXI1Slot7/PFI0"
 SyncHandle = "PXI1Slot4"
@@ -65,7 +65,7 @@ DestTerm = "PXI_Trig7"
 [Channel_0]
 Name = "ai0"
 Enabled = "TRUE"
-InputImpedance = "50.000000"
+InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "10.000000"
@@ -73,7 +73,7 @@ Range = "10.000000"
 [Channel_1]
 Name = "ai1"
 Enabled = "TRUE"
-InputImpedance = "50.000000"
+InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "10.000000"
@@ -81,7 +81,7 @@ Range = "10.000000"
 [Channel_2]
 Name = "ai2"
 Enabled = "TRUE"
-InputImpedance = "50.000000"
+InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "10.000000"
@@ -89,12 +89,13 @@ Range = "10.000000"
 [Channel_3]
 Name = "ai3"
 Enabled = "TRUE"
-InputImpedance = "50.000000"
+InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "10.000000"
 
 [ExportSignal]
 signal = "12487"
-Destination = "none"
+Destination = "/PXI1Slot3/PFI12"
 String = "none"
+Route = "none"
