--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
@@ -10,6 +10,11 @@ Script 0 = "ErrorSeverity,Abort"
 Script 1 = "SyncGetLockStatus"
 Script 2 = "SyncCheckLock"
 
+[LoopScript]
+LoopScript.<size(s)> = "2"
+LoopScript 0 = "GetSysTime"
+LoopScript 1 = "LoopUntilDone"
+
 [Handle]
 RefClk = "PXI1Slot7"
 Timing = "PXI1Slot4"
@@ -17,9 +22,11 @@ RefClkSource = "PXI_Trig0"
 
 [TimeRefType]
 TimeRefType = "GPS"
+; Provides a separate trigger for the digitizer to facilitate equivalent time sampling
+; Digitizer TrigTime provides a more accurate timestamp for the digitizer output.
 
 [Triggers]
-.<size(s)> = "2"
+.<size(s)> = "3"
 0.Name = "PPS_Trigger"
 0.DestTerm = "PXI_Trig3"
 0.SrcTerm = "PFI0"
@@ -38,14 +45,22 @@ TimeRefType = "GPS"
 1.Initiated = "FALSE"
 1.Type = "TrigTime"
 1.TrigTime = "FALSE"
-
+2.Name = "Digitizer Trigger"
+2.DestTerm = "PXI_Trig4"
+2.SrcTerm = "/PXI1Slot7/PFI2"
+2.SyncClk = "SyncClkAsync"
+2.Edge = "0"
+2.Invert? = "0"
+2.Initiated = "FALSE"
+2.Type = "Connect"
+2.TrigTime = "FALSE"
 
 [Clocks]
-.<size(s)> = "5"
+.<size(s)> = "6"
 0.Name = "DdsClk"
 0.RefClk = "DDS"
 0.ClkTerminal = "ClkOut"
-0.Frequency = "18000000.000000"
+0.Frequency = "20000000.000000"
 0.DutyCycle = "0.000000"
 0.ClkType = "DDS"
 0.Initiated = "FALSE"
@@ -60,11 +75,11 @@ TimeRefType = "GPS"
 1.Initiated = "FALSE"
 1.TrigTime = "FALSE"
 1.Delay = "0.000000"
-2.Name = "SamplerClk"
+2.Name = "DigitizerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
 2.ClkTerminal = "PXI_Trig2"
 2.Frequency = "0.000000"
-2.DutyCycle = "0.000000"
+2.DutyCycle = "0.500000"
 2.ClkType = "TrigClk"
 2.Initiated = "FALSE"
 2.TrigTime = "FALSE"
@@ -78,15 +93,24 @@ TimeRefType = "GPS"
 3.Initiated = "FALSE"
 3.TrigTime = "TRUE"
 3.Delay = "0.000000"
-4.Name = "Pgm_PPS"
+4.Name = "Digitizer Trigger"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
-4.Frequency = "5000.000000"
+4.Frequency = "1.000000"
 4.DutyCycle = "0.500000"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
 4.TrigTime = "FALSE"
 4.Delay = "0.000000"
+5.Name = "PRS"
+5.RefClk = "Synchronization"
+5.ClkTerminal = "/PXI1Slot7/PFI1"
+5.Frequency = "40.000000"
+5.DutyCycle = "0.500000"
+5.ClkType = "FreqClk"
+5.Initiated = "FALSE"
+5.TrigTime = "FALSE"
+5.Delay = "0.000000"
 
 [SyncWinClk]
 SyncWinClk = "FALSE"
