--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -19,7 +19,7 @@ RefClkSource = "PXI_Trig0"
 TimeRefType = "GPS"
 
 [Triggers]
-.<size(s)> = "2"
+.<size(s)> = "3"
 0.Name = "PPS_Trigger"
 0.DestTerm = "PXI_Trig3"
 0.SrcTerm = "PFI1"
@@ -38,9 +38,9 @@ TimeRefType = "GPS"
 1.Initiated = "FALSE"
 1.Type = "TrigTime"
 1.TrigTime = "FALSE"
-2.Name = "Connect_1"
-2.DestTerm = "PFI2"
-2.SrcTerm = "PXI_Trig2"
+2.Name = "FGen_Trigger"
+2.DestTerm = "PXI_Trig2"
+2.SrcTerm = "PFI2"
 2.SyncClk = "SyncClkAsync"
 2.Edge = "0"
 2.Invert? = "0"
@@ -58,6 +58,7 @@ TimeRefType = "GPS"
 0.ClkType = "DDS"
 0.Initiated = "FALSE"
 0.TrigTime = "FALSE"
+0.Delay = "0.000000"
 1.Name = "FGenClk"
 1.RefClk = "Synchronization Clock (Full Speed)"
 1.ClkTerminal = "PXI_Trig1"
@@ -66,6 +67,7 @@ TimeRefType = "GPS"
 1.ClkType = "TrigClk"
 1.Initiated = "FALSE"
 1.TrigTime = "FALSE"
+1.Delay = "0.000000"
 2.Name = "SamplerClk"
 2.RefClk = "Synchronization Clock (Full Speed)"
 2.ClkTerminal = "PXI_Trig4"
@@ -74,6 +76,7 @@ TimeRefType = "GPS"
 2.ClkType = "TrigClk"
 2.Initiated = "FALSE"
 2.TrigTime = "FALSE"
+2.Delay = "0.000000"
 3.Name = "1_PPS"
 3.RefClk = ""
 3.ClkTerminal = "/PXI1Slot7/PFI1"
@@ -82,18 +85,15 @@ TimeRefType = "GPS"
 3.ClkType = "FreqClk"
 3.Initiated = "FALSE"
 3.TrigTime = "TRUE"
-4.Name = "Pgm_PPS"
+3.Delay = "0.000000"
+4.Name = "FGen_Trigger"
 4.RefClk = ""
 4.ClkTerminal = "/PXI1Slot7/PFI2"
-4.Frequency = "10.000000"
+4.Frequency = "1.000000"
 4.DutyCycle = "0.500000"
 4.ClkType = "FreqClk"
 4.Initiated = "FALSE"
 4.TrigTime = "FALSE"
-0.Delay = "0.000000"
-1.Delay = "0.000000"
-2.Delay = "0.000000"
-3.Delay = "0.000000"
 4.Delay = "0.000000"
 
 [SyncWinClk]
