--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis.ini
@@ -5,7 +5,7 @@ Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 Type = PMU
 
 [Script]
-Script.<size(s)> = "15"
+Script.<size(s)> = "16"
 Script 0 = "FGenGetFunctionParams"
 Script 1 = "AnalysisSetFunctionParams"
 Script 2 = "LoopConfigStopCond,AnalysisIdle,Idle"
@@ -15,12 +15,13 @@ Script 5 = "FGenInitiateGen"
 Script 6 = "SensorStart"
 Script 7 = "AnalysisInitialize"
 Script 8 = "GetLoopScript,Digitizer,Analysis"
-Script 9 = "FGenAbortGen"
-Script 10 = "DigitizerAbort"
-Script 11 = "SensorStop"
+Script 9 = "SensorStop"
+Script 10 = "FGenAbortGen"
+Script 11 = "DigitizerAbort"
 Script 12 = "AnalysisAbort"
 Script 13 = "DigitizerClose"
 Script 14 = "FGenClose"
+Script 15 = "Wait,5000"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
@@ -41,7 +42,7 @@ AbortScript 6 = "Stop"
 F0 = "50"
 SettlingTime = "0.000000"
 AnalysisCycles = "6.000000"
-SampleRate = "48000.000000"
+SampleRate = "24000.000000"
 NumChannels = "6"
 TsOffset = "middle"
 %TsOffset: 1 = start, 2 = middle, 3 = end
