Working on using Finite sampling, except I think that recorsd the length of a trigger span are not contiguous but miss 3every other trigger.  I think there needs to be a trigger reset time for contiguous sampling using finite mode and more than one record.  However finite sampling works well for records of a few seconds.

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis - Finite.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis - Finite.ini
@@ -2,10 +2,10 @@
 Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 
 [Type]
-Type = PMU
+Type = PMU (Finite)
 
 [Script]
-Script.<size(s)> = "16"
+Script.<size(s)> = "19"
 Script 0 = "FGenGetFunctionParams"
 Script 1 = "AnalysisSetFunctionParams"
 Script 2 = "LoopConfigStopCond,AnalysisIdle,Idle"
@@ -14,19 +14,23 @@ Script 4 = "LoopSetStopCondition"
 Script 5 = "FGenInitiateGen"
 Script 6 = "SensorStart"
 Script 7 = "AnalysisInitialize"
-Script 8 = "GetLoopScript,Digitizer,Analysis"
-Script 9 = "SensorStop"
-Script 10 = "FGenAbortGen"
-Script 11 = "DigitizerAbort"
-Script 12 = "AnalysisAbort"
+Script 8 = "DigitizerFetchWaveforms"
+Script 9 = "Wait,5000"
+Script 10 = "DigitizerReadWaveforms"
+Script 11 = "AnalysisWriteWaveforms"
+Script 12 = "DigitizerAbort"
 Script 13 = "DigitizerClose"
-Script 14 = "FGenClose"
-Script 15 = "Wait,5000"
+Script 14 = "FGenAbortGen"
+Script 15 = "FGenClose"
+Script 16 = "SensorStop"
+Script 17 = "GetLoopScript,Analysis"
+Script 18 = "AnalysisAbort"
 
 [LoopScript]
-LoopScript.<size(s)> = "2"
-LoopScript 0 = "AnalysisGetState"
-LoopScript 1 = "LoopUntilDone"
+LoopScript.<size(s)> = "3"
+LoopScript 0 = "Wait,1000"
+LoopScript 1 = "AnalysisGetState"
+LoopScript 2 = "LoopUntilDone"
 
 [AbortScript]
 AbortScript.<size(s)> = "7"
