--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal - Finite.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU_Cal - Finite.ini
@@ -2,7 +2,7 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = PMU Cal
+Type = PMU Cal (Finite)
 
 [Script]
 Script.<size(s)> = "5"
@@ -12,18 +12,12 @@ Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
 
-[LoopScript]
-LoopScript.<size(s)> = "3"
-LoopScript 0 = "DigitizerFetchWaveforms"
-LoopScript 1 = "DigitizerReadWaveforms"
-LoopScript 2 = "AnalysisWriteWaveforms"
-
 [Handle]
 Handle = PXI1SLOT3
 
 [Acquisition]
 SampleRate = "24000.000000"
-RecordSize = "24000"
+RecordSize = "48000"
 NumRecords = "1"
 SampleMode = "0"
 Timeout (ms) = "5000"
@@ -67,7 +61,7 @@ Range = "10.000000"
 Type = "External"
 Source = "PXI_Trig4"
 TimebaseRate = "18000000.000000"
-sample mode = "10123"
+sample mode = "10178"
 TrigTerm = "PXI1Slot7/PFI0"
 SyncHandle = "PXI1Slot4"
 
