--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU_Cal.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU_Cal.ini
@@ -19,7 +19,7 @@ source = "PXI_Trig1"
 rate = "18000000.000000"
 
 [SampleRate]
-SampleRate = "16000.000000"
+SampleRate = "24000.000000"
 
 [Channels]
 Count = "6"
@@ -68,7 +68,7 @@ Channel 5.Connected = "FALSE"
 Channel 5.Mode (Function) = "Function"
 
 [FunctionIniFilePAth]
-Path = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
+Path = "PmuTestFunctions\\50F0_0kx1_.ini"
 
 [Triggers]
 Count = "1"
