Test scripting.  About to branch to work on test load and save.

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis - Finite.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis - Finite.ini
@@ -55,8 +55,7 @@ TsOffset = "middle"
 eTestType = "Step"
 
 [FcnIniFilePath]
-FunctionIniFilePath = "PmuTestFunctions\50F0_50Fs_FreqRng.ini"
-Accessors:FunctionIniFilePath = "PmuTestFunctions\\50F0_0kx1_.ini"
+Path = "PmuTestFunctions\\50F0_0kx1_.ini"
 
 [MagCorr]
 MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
