--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis - Settled.ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuAnalysis - Settled.ini
@@ -2,31 +2,40 @@
 Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 
 [Type]
-Type = PMU
+Type = PMU (Settled)
 
 [Script]
-Script.<size(s)> = "16"
+Script.<size(s)> = "21"
 Script 0 = "FGenGetFunctionParams"
 Script 1 = "AnalysisSetFunctionParams"
-Script 2 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 2 = "LoopConfigStopCond,TimeGtEnd,3"
 Script 3 = "GetSysTime"
 Script 4 = "LoopSetStopCondition"
 Script 5 = "FGenInitiateGen"
 Script 6 = "SensorStart"
-Script 7 = "AnalysisInitialize"
-Script 8 = "GetLoopScript,Digitizer,Analysis"
-Script 9 = "SensorStop"
-Script 10 = "FGenAbortGen"
-Script 11 = "DigitizerAbort"
-Script 12 = "AnalysisAbort"
-Script 13 = "DigitizerClose"
-Script 14 = "FGenClose"
-Script 15 = "Wait,5000"
+Script 7 = "GetLoopScript,FGen"
+
+
+Script 8 = "AnalysisInitialize"
+Script 9 = "DigitizerFetchWaveforms"
+Script 10 = "Wait,5000"
+Script 11 = "DigitizerReadWaveforms"
+Script 12 = "AnalysisWriteWaveforms"
+Script 13 = "DigitizerAbort"
+Script 14 = "DigitizerClose"
+Script 15 = "FGenAbortGen"
+Script 16 = "FGenClose"
+Script 17 = "SensorStop"
+
+Script 18 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 19 = "GetLoopScript,Analysis"
+Script 20 = "AnalysisAbort"
 
 [LoopScript]
-LoopScript.<size(s)> = "2"
-LoopScript 0 = "AnalysisGetState"
-LoopScript 1 = "LoopUntilDone"
+LoopScript.<size(s)> = "3"
+LoopScript 0 = "Wait,1000"
+LoopScript 1 = "AnalysisGetState"
+LoopScript 2 = "LoopUntilDone"
 
 [AbortScript]
 AbortScript.<size(s)> = "7"
@@ -51,8 +60,7 @@ TsOffset = "middle"
 eTestType = "Step"
 
 [FcnIniFilePath]
-FunctionIniFilePath = "PmuTestFunctions\50F0_50Fs_FreqRng.ini"
-Accessors:FunctionIniFilePath = "PmuTestFunctions\\50F0_0kx1_.ini"
+Path = "PmuTestFunctions\\50F0_0kx1_.ini"
 
 [MagCorr]
 MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
