Adding .ini script editor to main.vi.  ini script work for PMU testing

--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (SteadyState).ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (SteadyState).ini
@@ -2,7 +2,8 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = PMU Cal (SteadyState)
+Type = PMU (SteadyState)
+# Default Script
 
 [Script]
 Script.<size(s)> = "5"
@@ -11,14 +12,33 @@ Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
+#Default Loop Script
+
+[LoopScript]
+LoopScript.<size(s)> = "6"
+LoopScript 0 = "DigitizerFetchWaveforms"
+LoopScript 1 = "Wait,500"
+LoopScript 2 = "DigitizerReadWaveforms"
+LoopScript 3 = "AnalysisWriteWaveforms"
+LoopScript 4 = "GetSysTime"
+LoopScript 5 = "LoopUntilDone"
+# Script for finite capture
+
+[Finite]
+Finite.<size(s)> = "5"
+Finite 0 = "DigitizerInitialize"
+Finite 1 = "Wait,10"
+Finite 2 = "DigitizerConfigChannels"
+Finite 3 = "DigitizerConfigAcquisition"
+Finite 4 = "DigitizerConfigTrigger"
 
 [Handle]
 Handle = PXI1SLOT3
 
 [Acquisition]
-SampleRate = "24000.000000"
-RecordSize = "24000"
-NumRecords = "5"
+SampleRate = "48000.000000"
+RecordSize = "48000"
+NumRecords = "1"
 SampleMode = "0"
 Timeout (ms) = "5000"
 
@@ -61,7 +81,7 @@ Range = "10.000000"
 Type = "External"
 Source = "PXI_Trig4"
 TimebaseRate = "18000000.000000"
-sample mode = "10178"
+sample mode = "10123"
 TrigTerm = "PXI1Slot7/PFI0"
 SyncHandle = "PXI1Slot4"
 
