--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -4,11 +4,19 @@ Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 [Type]
 Type = "Dyn3 PMU Cal"
 
+# default run script
 [Script]
 Script.<size(s)> = "3"
 Script 0 = "ErrorSeverity,Abort"
 Script 1 = "SyncGetLockStatus"
 Script 2 = "SyncCheckLock"
+
+# run script for finite captures 
+[Finite]
+Finite.<size(s)> = "3"
+Finite 0 = "ErrorSeverity,Abort"
+Finite 1 = "SyncGetLockStatus"
+Finite 2 = "SyncCheckLock"
 
 [Handle]
 RefClk = "PXI1Slot7"
