Deleted obsolete .ini files.  Added .ini files for Absolute Phase Calibration.  Refining python automated testing

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (SteadyState).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (SteadyState).ini
@@ -7,24 +7,25 @@ Type = PMU (SteadyState)
 # gets continupous data for a fixed amount of time while analysing, then stops and completes the analysis
 
 [Script]
-Script.<size(s)> = "17"
+Script.<size(s)> = "18"
 Script 0 = "FGenGetFunctionParams"
 Script 1 = "AnalysisSetFunctionParams"
-Script 2 = "LoopConfigStopCond,TimeGtEnd,5"
+Script 2 = "LoopConfigStopCond,TimeGtEnd,6"
 Script 3 = "GetSysTime"
 Script 4 = "LoopSetStopCondition"
 Script 5 = "FGenInitiateGen"
-Script 6 = "SensorStart"
-Script 7 = "AnalysisInitialize"
-Script 8 = "GetLoopScript,Digitizer"
-Script 9 = "DigitizerAbort"
-Script 10 = "DigitizerClose"
-Script 11 = "FGenAbortGen"
-Script 12 = "FGenClose"
-Script 13 = "SensorStop"
-Script 14 = "LoopConfigStopCond,AnalysisIdle,Idle"
-Script 15 = "GetLoopScript,Analysis"
-Script 16 = "AnalysisAbort"
+Script 6 = "AnalysisInitialize"
+Script 7 = "Wait,1000"
+Script 8 = "SensorStart"
+Script 9 = "GetLoopScript,Digitizer"
+Script 10 = "DigitizerAbort"
+Script 11 = "DigitizerClose"
+Script 12 = "FGenAbortGen"
+Script 13 = "FGenClose"
+Script 14 = "SensorStop"
+Script 15 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 16 = "GetLoopScript,Analysis"
+Script 17 = "AnalysisAbort"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -94,7 +95,7 @@ Path = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
 MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 
 [DlyCorr]
-DlyCorr = "<size(s)=6> 800 800 800 -152 -153 -150"
+DlyCorr = "<size(s)=6> 1501 1555 1926 482 506 534"
 
 [Duration]
-Duration = "5.000000"
+Duration = "1.000000"
