--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (SteadyState).ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (SteadyState).ini
@@ -6,23 +6,21 @@ Type = PMU (SteadyState)
 # Default Script
 
 [Script]
-Script.<size(s)> = "5"
+Script.<size(s)> = "6"
 Script 0 = "DigitizerInitialize"
 Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
-#Default Loop Script
+Script 5 = "DigitizerFetchWaveforms"
 
 [LoopScript]
-LoopScript.<size(s)> = "6"
+LoopScript.<size(s)> = "5"
 LoopScript 0 = "DigitizerFetchWaveforms"
-LoopScript 1 = "Wait,500"
-LoopScript 2 = "DigitizerReadWaveforms"
-LoopScript 3 = "AnalysisWriteWaveforms"
-LoopScript 4 = "GetSysTime"
-LoopScript 5 = "LoopUntilDone"
-# Script for finite capture
+LoopScript 1 = "DigitizerReadWaveforms"
+LoopScript 2 = "AnalysisWriteWaveforms"
+LoopScript 3 = "GetSysTime"
+LoopScript 4 = "LoopUntilDone"
 
 [Finite]
 Finite.<size(s)> = "5"
