--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Current.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Current.ini
@@ -5,14 +5,12 @@ Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 Type = "AbsPhase_Current"
 
 [Script]
-Script.<size(s)> = "7"
-Script 0 = "SyncGetInfo,Digitizer_TrigTime"
-Script 1 = "DigitizerWriteSyncInfo"
-Script 2 = "DigitizerInitialize"
-Script 3 = "Wait,10"
-Script 4 = "DigitizerConfigChannels"
-Script 5 = "DigitizerConfigAcquisition"
-Script 6 = "DigitizerConfigTrigger"
+Script.<size(s)> = "5"
+Script 0 = "DigitizerInitialize"
+Script 1 = "Wait,10"
+Script 2 = "DigitizerConfigChannels"
+Script 3 = "DigitizerConfigAcquisition"
+Script 4 = "DigitizerConfigTrigger"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -24,8 +22,8 @@ LoopScript 2 = "AnalysisWriteWaveforms"
 Handle = PXI1SLOT3
 
 [Acquisition]
-SampleRate = "100000.000000"
-RecordSize = "100000"
+SampleRate = "48000.000000"
+RecordSize = "48000"
 NumRecords = "1"
 SampleMode = "0"
 Timeout (ms) = "5000"
@@ -52,7 +50,7 @@ Sources 1.Type = "Edge"
 [SampleClock]
 Type = "External"
 Source = "PXI_Trig2"
-TimebaseRate = "20000000.000000"
+TimebaseRate = "18000000.000000"
 sample mode = "10123"
 TrigTerm = "PXI1Slot7/PFI0"
 SyncHandle = "PXI1Slot4"
@@ -60,7 +58,7 @@ SyncHandle = "PXI1Slot4"
 [Sync]
 Handle = "PXI1Slot7"
 SrcTerm = ""
-DestTerm = "PXI_Trig7"
+DestTerm = "PXI_Trig3"
 
 [Channel_0]
 Name = "ai3"
@@ -87,7 +85,7 @@ Offset = "0.000000"
 Range = "5.000000"
 
 [Channel_3]
-Name = "ai6"
+Name = "ai2"
 Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
@@ -96,7 +94,7 @@ Range = "5.000000"
 
 [ExportSignal]
 signal = "12487"
-Destination = "/PXI1Slot3/PFI12"
+Destination = "none"
 String = "none"
 Route = "none"
 
