--- a/UserFiles/Plugins/Sensor/C37.118_Pmu/C37.118_PMU.ini
+++ b/UserFiles/Plugins/Sensor/C37.118_Pmu/C37.118_PMU.ini
@@ -4,6 +4,9 @@ Path = "..\..\SensorPlugins\C37.118_PmuClass\C37.118 PMU.lvclass"
 [Type]
 Type = C37.118 PMU
 
+[Script]
+Script.<size(s)> = '0'
+
 [PhaseArray]
 PhaseArray.<size(s)> = "8"
 PhaseArray 0 = "IA"
