Added Some user files for AbsPhase calibration.

--- a/UserFiles/Plugins/Analysis/SaveWaveforms/AbsPhase_NoFGen.ini
+++ b/UserFiles/Plugins/Analysis/SaveWaveforms/AbsPhase_NoFGen.ini
@@ -5,7 +5,7 @@ Path = "..\..\AnalysisPlugins\SaveWaveformsClass\SaveWaveforms.lvclass"
 Type = AbsPhase_NoFGen
 
 [Script]
-Script.<size(s)> = "7"
+Script.<size(s)> = "9"
 Script 0 = "LoopConfigStopCond,TimeGtEnd,1"
 Script 1 = "GetSysTime"
 Script 2 = "LoopSetStopCondition"
@@ -13,6 +13,8 @@ Script 3 = "AnalysisInitialize"
 Script 4 = "GetLoopScript,Digitizer,Sync"
 Script 5 = "DigitizerAbort"
 Script 6 = "DigitizerClose"
+Script 7 = "AnalysisAbort\0D"
+Script 8 = ""
 
 [AbortScript]
 AbortScript.<size(s)> = "4"
