--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Sine_6Chan.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Sine_6Chan.ini
@@ -2,15 +2,16 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = "AbsPhase_Current"
+Type = "AbsPhase_Sine_6Chan"
 
 [Script]
-Script.<size(s)> = "5"
+Script.<size(s)> = "6"
 Script 0 = "DigitizerInitialize"
 Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
-Script 4 = "DigitizerConfigTrigger"
+Script 4 = "DigitizerConfigTrigger\0D"
+Script 5 = ""
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -22,8 +23,8 @@ LoopScript 2 = "AnalysisWriteWaveforms"
 Handle = PXI1SLOT3
 
 [Acquisition]
-SampleRate = "100000.000000"
-RecordSize = "100000"
+SampleRate = "50000.000000"
+RecordSize = "50000"
 NumRecords = "1"
 SampleMode = "0"
 Timeout (ms) = "5000"
@@ -34,7 +35,7 @@ Delay = "0.000000"
 Holdoff = "0.000000"
 PretriggerSamples = "0"
 Sources.<size(s)> = "1"
-Sources 0.Name = "PXI_Trig3"
+Sources 0.Name = "PXI_Trig4"
 Sources 0.Coupling = "AC"
 Sources 0.Hysteresis = "0.000000"
 Sources 0.Level = "0.000000"
@@ -61,31 +62,31 @@ SrcTerm = ""
 DestTerm = "PXI_Trig3"
 
 [Channel_0]
-Name = "ai3"
-Enabled = "TRUE"
+Name = "ai0"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "5.000000"
 
 [Channel_1]
-Name = "ai4"
-Enabled = "TRUE"
+Name = "ai1"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "5.000000"
 
 [Channel_2]
-Name = "ai5"
-Enabled = "TRUE"
+Name = "ai2"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "5.000000"
 
 [Channel_3]
-Name = "ai6"
+Name = "ai3"
 Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
@@ -99,7 +100,31 @@ String = "none"
 Route = "none"
 
 [Channel_4]
-Name = "ai2"
+Name = "ai4"
+Enabled = "TRUE"
+InputImpedance = "1.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "5.000000"
+
+[Channel_5]
+Name = "ai5"
+Enabled = "TRUE"
+InputImpedance = "1.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "5.000000"
+
+[Channel_6]
+Name = "ai6"
+Enabled = "TRUE"
+InputImpedance = "0.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "5.000000"
+
+[Channel_7]
+Name = "ai7"
 Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
