--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Voltage.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Voltage.ini
@@ -22,8 +22,8 @@ LoopScript 2 = "AnalysisWriteWaveforms"
 Handle = PXI1SLOT3
 
 [Acquisition]
-SampleRate = "48000.000000"
-RecordSize = "48000"
+SampleRate = "50000.000000"
+RecordSize = "50000"
 NumRecords = "1"
 SampleMode = "0"
 Timeout (ms) = "5000"
@@ -50,7 +50,7 @@ Sources 1.Type = "Edge"
 [SampleClock]
 Type = "External"
 Source = "PXI_Trig2"
-TimebaseRate = "18000000.000000"
+TimebaseRate = "20000000.000000"
 sample mode = "10123"
 TrigTerm = "PXI1Slot7/PFI0"
 SyncHandle = "PXI1Slot4"
@@ -97,3 +97,11 @@ signal = "12487"
 Destination = "none"
 String = "none"
 Route = "none"
+
+[Channel_4]
+Name = "ai4"
+Enabled = "TRUE"
+InputImpedance = "1.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "5.000000"
