--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
@@ -5,10 +5,11 @@ Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 Type = "AbsPhase"
 
 [Script]
-Script.<size(s)> = "3"
-Script 0 = "ErrorSeverity,Abort"
+Script.<size(s)> = "4"
+Script 0 = "ErrorSeverity,auto"
 Script 1 = "SyncGetLockStatus"
-Script 2 = "SyncCheckLock"
+Script 2 = "SyncCheckLock\0D"
+Script 3 = ""
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
@@ -60,7 +61,7 @@ TimeRefType = "GPS"
 0.Name = "DdsClk"
 0.RefClk = "DDS"
 0.ClkTerminal = "ClkOut"
-0.Frequency = "18000000.000000"
+0.Frequency = "20000000.000000"
 0.DutyCycle = "0.000000"
 0.ClkType = "DDS"
 0.Initiated = "FALSE"
@@ -105,7 +106,7 @@ TimeRefType = "GPS"
 5.Name = "PRS"
 5.RefClk = "Synchronization"
 5.ClkTerminal = "/PXI1Slot7/PFI1"
-5.Frequency = "50.000000"
+5.Frequency = "5000.000000"
 5.DutyCycle = "0.500000"
 5.ClkType = "FreqClk"
 5.Initiated = "FALSE"
