--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_PRS_6Chan.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_PRS_6Chan.ini
@@ -2,7 +2,7 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = "AbsPhase_Current"
+Type = "AbsPhase_PRS_6Chan"
 
 [Script]
 Script.<size(s)> = "5"
@@ -22,8 +22,8 @@ LoopScript 2 = "AnalysisWriteWaveforms"
 Handle = PXI1SLOT3
 
 [Acquisition]
-SampleRate = "100000.000000"
-RecordSize = "100000"
+SampleRate = "50000.000000"
+RecordSize = "50000"
 NumRecords = "1"
 SampleMode = "0"
 Timeout (ms) = "5000"
@@ -34,7 +34,7 @@ Delay = "0.000000"
 Holdoff = "0.000000"
 PretriggerSamples = "0"
 Sources.<size(s)> = "1"
-Sources 0.Name = "PXI_Trig3"
+Sources 0.Name = "PXI_Trig4"
 Sources 0.Coupling = "AC"
 Sources 0.Hysteresis = "0.000000"
 Sources 0.Level = "0.000000"
@@ -61,7 +61,7 @@ SrcTerm = ""
 DestTerm = "PXI_Trig3"
 
 [Channel_0]
-Name = "ai3"
+Name = "ai0"
 Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
@@ -69,7 +69,7 @@ Offset = "0.000000"
 Range = "5.000000"
 
 [Channel_1]
-Name = "ai4"
+Name = "ai1"
 Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
@@ -77,7 +77,7 @@ Offset = "0.000000"
 Range = "5.000000"
 
 [Channel_2]
-Name = "ai5"
+Name = "ai2"
 Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
@@ -85,7 +85,7 @@ Offset = "0.000000"
 Range = "5.000000"
 
 [Channel_3]
-Name = "ai6"
+Name = "ai3"
 Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
@@ -99,9 +99,17 @@ String = "none"
 Route = "none"
 
 [Channel_4]
-Name = "ai2"
+Name = "ai4"
 Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "5.000000"
+
+[Channel_5]
+Name = "ai5"
+Enabled = "TRUE"
+InputImpedance = "0.000000"
+Coupling = "AC"
+Offset = "0.000000"
+Range = "0.000000"
