Added 2 new .ini files for AbsPhase calibration.

--- a/UserFiles/Plugins/FGen/NiPxi6733/AbsPhase_10V_10A.ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/AbsPhase_10V_10A.ini
@@ -2,7 +2,7 @@
 Path = "..\..\FgenPlugins\NiPxi6733Class\NiPxi6733.lvclass"
 
 [Type]
-Type = "AbsPhase_Voltage_10V_Direct"
+Type = "AbsPhase_10V_10A"
 
 [Script]
 Script.<size(s)> = "4"
@@ -19,7 +19,7 @@ source = "PXI_Trig1"
 rate = "20000000.000000"
 
 [SampleRate]
-SampleRate = "50000.000000"
+SampleRate = "500000.000000"
 
 [Channels]
 Count = "6"
@@ -53,14 +53,14 @@ Channel 3.Handle = "PXI1Slot6"
 Channel 3.Connected = "FALSE"
 Channel 3.Mode (Function) = "Arbitrary"
 Channel 4.Name = "ao4"
-Channel 4.Enabled = "TRUE"
+Channel 4.Enabled = "FALSE"
 Channel 4.Operation = "Continuous"
 Channel 4.Impedance (50) = "50.000000"
 Channel 4.Handle = "PXI1Slot6"
 Channel 4.Connected = "FALSE"
 Channel 4.Mode (Function) = "Arbitrary"
 Channel 5.Name = "ao5"
-Channel 5.Enabled = "TRUE"
+Channel 5.Enabled = "FALSE"
 Channel 5.Operation = "Continuous"
 Channel 5.Impedance (50) = "50.000000"
 Channel 5.Handle = "PXI1Slot6"
@@ -68,7 +68,7 @@ Channel 5.Connected = "FALSE"
 Channel 5.Mode (Function) = "Arbitrary"
 
 [FunctionIniFilePAth]
-Path = "PmuTestFunctions\\AbsPhase_Voltage_10V_Direct.ini"
+Path = "PmuTestFunctions\\AbsPhase_10V_10A.ini"
 
 [Triggers]
 Count = "1"
